Update VOCUS 2023-04-07 patch

--- a/_posts/2021-04-28-VOCUS-關於台灣歷史的二三事-介紹湯錦台-大航海時代的台灣.html
+++ b/_posts/2021-04-28-VOCUS-關於台灣歷史的二三事-介紹湯錦台-大航海時代的台灣.html
@@ -8,7 +8,7 @@ tags: blog
 author: 爬格子的雀榕
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1920px" class="image-block-prerender" data-src="https://images.vocus.cc/49839c81-cfa6-4a1e-ae9f-ca5c450490d1.jpg" data-width="1920" data-height="2694" data-position="center" src="https://images.vocus.cc/49839c81-cfa6-4a1e-ae9f-ca5c450490d1.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">湯錦台「大航海時代的台灣」的封面，如果出版社2011年全新增修版。</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/49839c81-cfa6-4a1e-ae9f-ca5c450490d1.jpg" data-width="1920" data-height="2694" data-position="center" src="https://images.vocus.cc/49839c81-cfa6-4a1e-ae9f-ca5c450490d1.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">湯錦台「大航海時代的台灣」的封面，如果出版社2011年全新增修版。</figcaption></div></figure>
 <div class="draft-block draft--p left">大航海時代的台灣，其實非常熱鬧，葡萄牙人、西班牙人、日本人、荷蘭人、英國人、鄭氏家族等勢力在西太平洋相互競逐，每股勢力或深或淺都曾影響台灣。這些人事物不但錯縱複雜，而且散見在許多國家的歷史文獻與民間傳說，不論是從事相關的學術研究，還是綜合、參照眾多資料去撰寫一本歷史通俗讀物，都很不容易！</div>
 <div class="draft-block draft--p left"> </div>
 <div class="draft-block draft--p left">湯錦台以華人的角度出發，將閩南海商(包括海盜)、葡萄牙人、西班牙人、日本人、荷蘭人……這些海上勢力的崛起過程娓娓道來，尤其是他們對台灣島的謀略、野心及經營之道，然後聚焦在荷蘭人與鄭成功的對決，並在書末反思幾個重要議題。作者在最後一章反思荷蘭38年的殖民統治給台灣帶來的影響、荷蘭在東西方的不同殖民統治方式對後人的影響、明鄭與滿清治理台灣的不同方式及態度為自身招來什麼命運，以及這段歷史能給予台灣什麼樣的啟示。</div>
