--- a/_posts/2021-10-25-VOCUS-關於台灣歷史的二三事-潘英-快被埋沒的台灣平埔族研究者.html
+++ b/_posts/2021-10-25-VOCUS-關於台灣歷史的二三事-潘英-快被埋沒的台灣平埔族研究者.html
@@ -9,38 +9,31 @@ author: 爬格子的雀榕
 ---
 
 <h2 class="draft-block draft--h2" name="header-43b5a">潘英是誰？</h2>
-<figure class="draft--imgNormal draft-block"><div><img style="height:380px" class="image-block-prerender" data-src="https://images.vocus.cc/eeef8b49-2b0e-4449-9999-69c6972bd76b.jpg" data-width="380" data-height="380" data-position="center" src="https://images.vocus.cc/eeef8b49-2b0e-4449-9999-69c6972bd76b.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">筆者從《台灣人的祖籍與姓氏分佈》翻拍的照片。照片的人物是潘英。</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/eeef8b49-2b0e-4449-9999-69c6972bd76b.jpg" data-width="380" data-height="380" data-position="center" src="https://images.vocus.cc/eeef8b49-2b0e-4449-9999-69c6972bd76b.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">筆者從《台灣人的祖籍與姓氏分佈》翻拍的照片。照片的人物是潘英。</figcaption></div></figure>
 <div class="draft-block draft--p left">研究台灣平埔族的人很多，目前已有不少書籍、網文、影片在民間流傳，不過，到目前為止(2022年2月8日)，為平埔族書寫歷史的人，仍然不多。在為數不多的著作中，潘英的《臺灣平埔族史》(1996年6月初版，南天書局)是現今我讀過較早，也是比較具有學術價值的一部，其他的論者──尤其是近來台獨人士廣為討論的沈建德、何顯榮、潘智仁、埔農等人，其論點不是需要更多考古、歷史、科學的証據支撐，就是論者腦補過多。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">潘英是一個什麼樣的研究者？關於他的生平事跡，除了扉頁上的制式介紹，我用google搜尋，幾乎找不到其他資料。幾天前，我在臉書發文，簡短介紹他另一部作品《台灣原住民族的歷史源流》(2000年初版二刷，臺原出版社)，沒多久一位板友竟回應我說：「潘英原任職我國海關，工作餘暇研究台灣史，獲得很高的評價，以關稅總局會計室主任身分退休。可惜已往生。」啊~~可憐！我只能按那位熱心板友的回應與幾本書上的介紹，勉強拼湊出以下的模糊圖像。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">潘英，1941年生。宜蘭市人，是宜蘭市北門口潘姓家族的一員。其族群認同按照《臺灣平埔族史》後記自云：「……我宜蘭市北門口潘氏是從士林遷來的，傳到筆者這一代已是第七代；數年前，北門口潘氏某房尚曾分得士林潘氏祖厝財產。事實上，北門口潘氏亦可謂當地大族，筆者祖父輩及父輩在當地皆有相當聲望，整個宗族亦從來無聞與平埔族有任何瓜葛，似確與平埔族無關。卻是，並不能排除族中曾摻有平埔族血液的可能。」，自認是可能帶有平埔族血統的漢人。</div>
 <div class="draft-block draft--p left">成大會計系畢業。工作方面，目前只能確定他在財政部關稅總局會計室工作，曾當副主任，最後以主任的身份退休。利用工作閒暇研究歷史，是業餘的歷史寫作者。他那些以台灣歷史為題材的著作，據說得到很高的評價，其他作品就不得而知。以下是我所能查到的作品：</div>
 <div class="draft-block draft--p left">《中國上古史新探》、《中國上古同名地名辭彙及索引》、《資治通鑑司馬光史論之研究》、《同宗同鄉關係與台灣人口之祖籍及姓氏分布的研究》、《革命與立憲》、《萬馬奔騰的西潮》、《民國史上之非正統政治團體人物》、《惡夢與幻夢交織下之近世中日關係》、《國民黨與共產黨》、《台灣拓殖史與其族氏分佈之研究》、《台灣人的祖籍及姓氏分佈》、《台灣稀姓的祖籍與姓氏分佈》、《台灣平埔族史》、《台灣原住民族的歷史源流》。</div>
 <div class="draft-block draft--p left">(1986年，民國75年，明文書局出的《中國歷代職官辭典》，編著是潘英，我不確定是否同一人。)</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">從上述的書名來看，潘英似乎對台灣人的祖籍與姓氏分佈、台灣原住民、辛亥革命前後的中國近代史、中國上古史……這幾個主題懷有高度的興趣。其大部分著作恐怕已經絕版，以販售新書為主的博客來、誠品等書店，應該是買不到他的書，需要到露天拍賣、蝦皮購物，及全台各地的二手書店尋找，或是到有收藏其書的公立圖書館借閱。</div>
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:564px" class="image-block-prerender" data-src="https://images.vocus.cc/8844e9da-0546-4915-87a5-287ff3c04efb.jpg" data-width="564" data-height="811" data-position="center" src="https://images.vocus.cc/8844e9da-0546-4915-87a5-287ff3c04efb.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">潘英的台灣史相關著作，由臺原出版社、南天書局出版。</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/8844e9da-0546-4915-87a5-287ff3c04efb.jpg" data-width="564" data-height="811" data-position="center" src="https://images.vocus.cc/8844e9da-0546-4915-87a5-287ff3c04efb.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">潘英的台灣史相關著作，由臺原出版社、南天書局出版。</figcaption></div></figure>
 <div class="draft-block draft--p left"></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h2 class="draft-block draft--h2" name="header-5iof3">研究與寫作理念：</h2>
 <div class="draft-block draft--p left">對於台灣史，潘英認為，台灣史家過分關注政治層面，尤其是日治時期以後的台灣史，較少關心日治時期以前廣大人民的生活樣貌；真正的台灣史應該是反映各時代廣大人民生活的各方面，因此他致力於台灣民族史的研究。其研究與寫作理念，在《台灣原住民族的歷史源流》的〈作者自序〉交代非常詳盡，他寫道：</div>
 <blockquote class="draft-block draft--blockquote">筆者研究台灣史，曾經經過幾個「悟」的過程。首先，發現坊間的台灣史論著僅敘述統治者如何統治台灣，這些論著又多充滿了特定意識型態，「悟」到今日台灣本是台灣先民自動拓墾的成果，而這種拓墾實具殖民性質，「拓殖史」才是台灣真正的歷史，所以有《台灣拓殖史及其族姓分布研究》一書的出版。幾乎在《拓殖史》脫稿同時，筆者又再「悟」到台灣原住民族，尤其平埔族在台灣拓殖史上的獨特地位，所以有《台灣平埔族史》的撰述。但《平埔族史》仍不是以平埔族自我意識為主體撰述的作品，因為筆者「悟」到真正的台灣史應是各時代台灣人民的生活史，已在該書脫稿之後。而要表現各時代台灣廣大人民的生活真相，最重要的，便是要抓住台灣各民族在歷史發展過程中的脈動，所以以台灣原住民為主軸，並以他們的歷史發展為分期標準的「台灣原住民族史」，便成為新近筆者研究台灣史的主題。將來還想在「台灣漢民族史」上追尋台灣史的真相，最後則準備以「台灣民族史」的完成，作為筆者在這一方面的研究總結，替自己在台灣史研究上奠立基點。(《台灣原住民族的歷史源流》〈作者自序〉第2~3頁)</blockquote>
 <div class="draft-block draft--p left">可惜，潘英來不及完成「台灣漢民族史」與「台灣民族史」，只出版《台灣平埔族史》，後面預定的兩部作品就沒下文了。如果老天讓他活到現在，也許《台灣漢民族史》與《台灣民族史》已經出現在誠品書店的展示架吧？</div>
-<div class="draft-block draft--p left"></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h2 class="draft-block draft--h2" name="header-26li">代表作品：台灣原住民族的歷史源流、<span style="font-weight: bold; ">台灣平埔族史</span></h2>
-<figure class="draft--imgNormal draft-block"><div><img style="height:591px" class="image-block-prerender" data-src="https://images.vocus.cc/ea284b0c-beb2-411b-b717-7682f71f993e.jpg" data-width="591" data-height="862" data-position="center" src="https://images.vocus.cc/ea284b0c-beb2-411b-b717-7682f71f993e.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2000年5月第一版第2刷，臺原出版社。</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/ea284b0c-beb2-411b-b717-7682f71f993e.jpg" data-width="591" data-height="862" data-position="center" src="https://images.vocus.cc/ea284b0c-beb2-411b-b717-7682f71f993e.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2000年5月第一版第2刷，臺原出版社。</figcaption></div></figure>
 <div class="draft-block draft--p left">潘英雖然沒有提出什麼不同於前人的論點，卻細心整理、敘述、評論日治時期以來重要的原住民研究，也努力梳理漢文文獻、日本官方文書，以及戰後至今國民政府與民眾使用的族稱涵義，與這些名詞的演變過程。</div>
 <div class="draft-block draft--p left">他不像現今幾位大談平埔族歷史的論者，後者談論平埔族、平埔族歷史，竟然不去引用、議論學院的研究成果，也不太關心解嚴以後快速發展的原住民研究及田野調查，更有甚者，還以「那些學者從小受國民黨洗腦教育影響，所以……」、「他們的老師那麼親中國，徒子徒孫做出來的研究能看嗎？」、「研究者所參考的漢文文獻，不少在戰後遭有心人竄改、曲解」諸如此類的理由，直接斷言人家的研究不可靠，謝絕參考。</div>
 <div class="draft-block draft--p left">或許就歷史、人類學、民族學、考古學、社會學……系所的專業標準而言，潘英的論述還不夠完美，但與現今那些業餘「平埔磚家」相比，我認為不錯了。</div>
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:566px" class="image-block-prerender" data-src="https://images.vocus.cc/4e27165d-b425-47ec-af7e-94bc4c11b109.jpg" data-width="566" data-height="828" data-position="center" src="https://images.vocus.cc/4e27165d-b425-47ec-af7e-94bc4c11b109.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">1996年6月初版，南天書局出版。</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/4e27165d-b425-47ec-af7e-94bc4c11b109.jpg" data-width="566" data-height="828" data-position="center" src="https://images.vocus.cc/4e27165d-b425-47ec-af7e-94bc4c11b109.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">1996年6月初版，南天書局出版。</figcaption></div></figure>
 <div class="draft-block draft--p left">這本書應該是平埔族研究較具有開創性的著作。因為從伊能嘉矩到1996年作者出書當時，大多數研究者著力在研究自己當時所見的平埔族祭典、風俗、器物、生活習慣、思考方式……等，已經有一些學者、業餘人士編撰的民俗誌、田野調查、論文集等著作問世，但是以整個平埔族為單位的歷史著作還沒出現。</div>
 <div class="draft-block draft--p left">早期的學者受到許多條件限制，難以為個別平埔族群或整個平埔族建構歷史，之後因學術研究與田野調查成果積累、政治風氣漸趨開放、網路興起以後促成的資訊交流……等因素，建構(要說「再現」也可以)個別還是整個平埔族的歷史，變的相對容易，只是目前為止，市面上雖有個別平埔族群史，如：去年11月出版的《<a href="https://www.books.com.tw/products/0010913182?sloc=main" target="_blank" class="draft--a">道卡斯族新港社部落史</a>》；以整個平埔族為單位的歷史，就只有「臺灣省文獻委員會」邀集學者撰寫的「台灣原住民史」系列的「平埔族史篇」！而且號稱要出4冊，結果二十年過去，迄今只見到北部、中部2本，南部、東部2本不見蹤影！</div>
 <div class="draft-block draft--p left">如果把書還沒出齊的「台灣原住民史‧平埔族史篇」系列算進去，依然無法掩蓋潘英這本書的風采！因為潘英這本書的出版年代比《台灣原住民史‧平埔族史篇(北)》早，前者1996年6月出版，後者2001年後出版，而且潘英的書涵蓋全台灣的平埔族群，後者只有寫到半個台灣。</div>
-<div class="draft-block draft--p left"></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h2 class="draft-block draft--h2" name="header-f9eab">整體評價：</h2>
 <div class="draft-block draft--p left">潘英對自己的身份認同相當謹慎，不因自己姓潘，就在沒有証據証明自己是平埔族的情況，就接受「過去，許多平埔人以潘為姓，所以台灣那些姓潘的，就是平埔族後代」諸如此類的說詞，認為自己是平埔族，然後立刻以債權人向債務人討債的心態書寫歷史。</div>
