--- a/_posts/2023-04-06-VOCUS-超級瑪利歐兄弟-單純且可愛的小品.html
+++ b/_posts/2023-04-06-VOCUS-超級瑪利歐兄弟-單純且可愛的小品.html
@@ -51,4 +51,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">一些資深影評也許期望有更多的反轉跟深層的含意，但我認為瑪利歐也許沒有要說一步很難懂或很厲害的故事，從原案任天堂遊戲類別和照明娛樂一直以來製作的方向，可以看出他們想製作的方向是家庭娛樂性多過於其他。</div>
 <div class="draft-block draft--p left">《瑪利歐》從過去的走向一直以多樣闖關性、沙盒探索、一起同樂為主軸，而如果以這樣的概念套在電影中就可以很明顯的察覺到任天堂在宣傳之餘，想要一個簡單帶來歡樂的瑪利歐故事。</div>
 <div class="draft-block draft--p left">小孩子看得很開心，玩家可以從彩蛋和電影的一些故事架構看到遊戲有趣的影子，我想這才是遊戲改編的精隨，並且配合時代去作出人人都可接受的更改，碧琪公主不再是等人拯救的女性、庫巴的侵略有了感性的私慾、瑪利歐兄弟的誤闖讓整個世界觀有合理性，剩下的就只是享受冒險和遊戲中各種可以勾起回憶的樂趣。遊戲粉絲們要的不多，但某些影評不玩遊戲卻意見很多。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/iE-BqYVfA4I"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/iE-BqYVfA4I"></iframe></div>
