--- a/_posts/2021-04-02-VOCUS-關於台灣歷史的二三事-推薦-簡明台灣圖史.html
+++ b/_posts/2021-04-02-VOCUS-關於台灣歷史的二三事-推薦-簡明台灣圖史.html
@@ -9,7 +9,7 @@ author: 爬格子的雀榕
 ---
 
 <h3 class="draft-block draft--h3" name="header-a4h41"><span style="font-weight: bold; ">我推薦國立台灣歷史博物館推出的「簡明台灣圖史」</span></h3>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1920px" class="image-block-prerender" data-src="https://images.vocus.cc/8a8d75f5-8e56-4ece-8bce-8de87a37efbc.jpg" data-width="1920" data-height="2502" data-position="center" src="https://images.vocus.cc/8a8d75f5-8e56-4ece-8bce-8de87a37efbc.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><span style="font-weight: bold; ">這本書是國立台灣歷史博物館推出，大雁文化事業出版。</span></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/8a8d75f5-8e56-4ece-8bce-8de87a37efbc.jpg" data-width="1920" data-height="2502" data-position="center" src="https://images.vocus.cc/8a8d75f5-8e56-4ece-8bce-8de87a37efbc.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><span style="font-weight: bold; ">這本書是國立台灣歷史博物館推出，大雁文化事業出版。</span></figcaption></div></figure>
 <div class="draft-block draft--p left">國立台灣歷史博物館幾年前推出這本台灣歷史入門書，昨天我讀了，真的如書背所說，這是一本能讓我們「輕鬆讀完的臺灣小史」！裡面圖文並茂，又有「大航海時代」、「清代台灣」、「日本時代」的大事記，方便我們快速了解每個時代重大的歷史事件。</div>
 <div class="draft-block draft--p left">本書由石文誠、陳怡宏、蔡承豪、謝仕淵這四位歷史學者撰寫，論述範圍從上古寫到二戰結束，用極精簡的文字、照片簡介，向我們讀者講述台灣多變且複雜的地理環境，如何產生有別於週邊國家的獨特歷史發展。</div>
 <div class="draft-block draft--p left">美中不足的是，這本書只寫到1945年二戰結束，戰後的事情沒有提到，不過坊間的台灣史及相關著作，敘述國府時代史事的部分甚多，有興趣者能按自身需求輕易找到符合條件的書籍、網路文章，似乎不差這一本小書。</div>
