--- a/_posts/2022-01-04-VOCUS-關於台灣歷史的二三事-陳浩洋-臺灣四百年庶民史.html
+++ b/_posts/2022-01-04-VOCUS-關於台灣歷史的二三事-陳浩洋-臺灣四百年庶民史.html
@@ -8,21 +8,16 @@ tags: blog
 author: 爬格子的雀榕
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:536px" class="image-block-prerender" data-src="https://images.vocus.cc/8ee1b4af-8e34-4d08-bbfb-cbcbd10616eb.jpg" data-width="536" data-height="750" data-position="center" src="https://images.vocus.cc/8ee1b4af-8e34-4d08-bbfb-cbcbd10616eb.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">1992年，由「自立晚報文化出版部」出版，目前已經絕版。</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/8ee1b4af-8e34-4d08-bbfb-cbcbd10616eb.jpg" data-width="536" data-height="750" data-position="center" src="https://images.vocus.cc/8ee1b4af-8e34-4d08-bbfb-cbcbd10616eb.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">1992年，由「自立晚報文化出版部」出版，目前已經絕版。</figcaption></div></figure>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h3 class="draft-block draft--h3" name="header-8fp2v">陳浩洋是誰？</h3>
 <div class="draft-block draft--p left">按這本書的作者介紹，陳浩洋「1918年生，台灣羅東人(註：現今宜蘭縣羅東鎮人)。著作有《醜陋的戰爭》(日文)、《MONOTAI31年的記錄》(日文)、《中國美女傳》(日文)、《中國古典的招待》(日文)、《老鄉唱民謠》(台語)、《台灣四百年庶民史》(中文)」。</div>
 <div class="draft-block draft--p left">除了上述極為簡短的介紹，我找不到其他資料，就算使用google搜尋，仍然沒有結果。他可能一輩子都在台灣，也有可能旅居日本成為台僑，或者已經歸化為日本國民，當台裔日本人。</div>
 <div class="draft-block draft--p left">我在「露天拍賣」與「蝦皮購物」平台搜尋，還能見到他以日文寫成的《中國美女傳》(日本鴻儒堂出版)與《台灣四百年庶民史》(自立晚報出版部)，但其他作品似乎已在市場消失，不易尋找。</div>
-<div class="draft-block draft--p left"></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h3 class="draft-block draft--h3" name="header-ak309">評論：</h3>
 <div class="draft-block draft--p left">作者<span style="font-weight: bold; ">以散文體書寫台灣史</span>，並以<span style="font-weight: bold; ">庶民的觀點</span>探究台灣歷史，向讀者展示台灣民眾在外來政權統治之下的生活樣貌。書中穿插個人見聞、宜蘭羅東當地的傳說、台灣歷史知識，以及自行虛構的故事，來增加讀者的閱讀趣味。雖然這樣的作法無可避免會降低本書的知識性，不過對於從小飽受教科書疲勞轟炸而排拒歷史的人來說，這本書可能會讓他們卸下心防，拿來翻閱一番。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">作者虛構一些小故事，試圖讓讀者了解古人遭遇改朝換代、戰爭、天災人禍等的無奈處境。</span>例如：第四章「持續反抗」的「走反」這部分，作者創造了一個角色──名為「阿三」的農家小孩，並以此為視角，描寫他與家人、鄰居逃避日軍屠村的驚險過程，以及阿三窺探日軍斬殺抗日人士的場面，以整個故事情節展現日軍兇殘與濫殺無辜的行徑，也試著將當年村民的各種遭遇，用「阿三」及其家人、鄰居這些角色為我們讀者演繹一番。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">有的故事很動人，有的帶有一點詼諧，有的故事情節卻不太合乎常理，或者缺乏歷史根據</span>，例如：首章「近代史上的台灣」當中「苦命的金髮美女」這個部分，作者所寫的故事，同時集合「情節不太合乎常理」與「缺乏歷史根據」這兩個特點，作者是這樣寫的：</div>
 <blockquote class="draft-block draft--blockquote">荷蘭人離開後，留在台灣的荷蘭婦女又有什麼樣的命運呢？</blockquote>
 <blockquote class="draft-block draft--blockquote">聽說可以和那些戴著白色帽子、穿著長裙的白人姑娘結婚的消息，台南地區有錢的男性莫不欣喜若狂。他們積極地想獲取這些女性的歡心。對中國男人來說，娶妾並不是件醜聞，相反地大家還覺得那是「豔福不淺」，沒有人不以既羨慕又嫉妒的心情來看待！</blockquote>
@@ -36,27 +31,18 @@ author: 爬格子的雀榕
 <div class="draft-block draft--p left">一是，那些有錢有勢的男人竟然會讓他們喜愛的荷蘭美人提水、舂米、縫補衣物，而且還讓「她一個人」去做所有的家務，這非常離譜！有錢有勢的人明明有一堆僕人與婢女在做家事，哪輪的到男主人的寵妾？其次，哪個大老婆敢不顧丈夫的感受去虐妾，而且毫不遮掩？別忘了！漢人男性若是一個不高興，可是會名正言順地休妻，直接將小妾扶正，或是乾脆揮拳教訓。</div>
 <div class="draft-block draft--p left">另一個超級不合理的地方是：作者說外國人不太用針線，因此那些荷蘭美女的手被針頭刺的鮮血淋漓。──既然如此，外國人的衣服、帽子是怎麼做出來的？難不成都是中國人做給他們，賣給他們的嗎？外國女人不太用針線，也不太會縫紉……恕我直言，這樣的事情我從沒聽過！</div>
 <div class="draft-block draft--p left">缺乏歷史根據的地方在於：當年並沒有大批金髮碧眼的荷蘭女子跳河自殺，而且台南市區(「府城」一帶)也沒有這樣的傳說，有的是荷蘭人與原住民女子所生的混血兒，散落在南部某些原住民部落，然後成為部落的一員。總之，這則故事極可能是作者憑空編造的。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">這本書比較大的問題是：作者在寫明鄭與清領時期的時候，參考、襲用王育德《台灣：苦悶的歷史》的地方太多！</span>尤其是鄭成功與鄭經父子統治台灣的那一部分，陳浩洋不少段落與王育德的內容超級相似，可以說，作者模擬後者的段落大意，然後用自己的話改寫而成。由於某些地方過於相似，我認為有抄襲的嫌疑。</div>
 <div class="draft-block draft--p left">若以2018年9月再版的《台灣：苦悶的歷史》作為對照，讀者會發現……</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1436px" class="image-block-prerender" data-src="https://images.vocus.cc/c89d3957-bf77-4450-a335-6bfc49b98a26.jpg" data-width="1436" data-height="2048" data-position="center" src="https://images.vocus.cc/c89d3957-bf77-4450-a335-6bfc49b98a26.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">作者王育德因受兄長王育霖連累，擔心被國民政府軍警找麻煩，因而流亡日本。</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/c89d3957-bf77-4450-a335-6bfc49b98a26.jpg" data-width="1436" data-height="2048" data-position="center" src="https://images.vocus.cc/c89d3957-bf77-4450-a335-6bfc49b98a26.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">作者王育德因受兄長王育霖連累，擔心被國民政府軍警找麻煩，因而流亡日本。</figcaption></div></figure>
 <div class="draft-block draft--p left">這本書第24頁至第25頁第一段的內容，與王育德《台灣：苦悶的歷史》第34頁整頁內容很像！第73頁的內容與王書第85頁到86頁的內容，相似度高；本書第74頁至第75頁的內容與王書第90頁的內容頗接近，尤其是第68頁至69頁的地方，與王書第81頁非常相似！以下是本書與王書最相似的段落，讀者可找這兩本書比對其他的部分。</div>
 <blockquote class="draft-block draft--blockquote">他的母親是日本人，所以他也有潔癖的遺傳，而且脾氣不太好，這種冷醒的性格在治軍上尤其明顯。他發覺承天府尹(台南市長)和天興縣知(縣長)共謀盜取軍糧時，立刻就將他二人斬首，甚至連他的部將也因搶奪人民銀兩、匿藏糧食而被處以極刑。當時，他又正好聽到留在廈門的長子鄭經和幼弟的乳母私通的消息，盛怒之下，派遣使者帶著四個木桶前往廈門，要把董夫人(自己的妻子)以監督不周、鄭經與乳母不倫、生下的孩子為不義之子的罪名斬首，然後將斬下的首級用木桶帶回。董夫人和鄭經因有人庇護而倖免一死。這個徹底的法治主義是二十年來維持鄭軍士氣的一大支柱。(陳浩洋)</blockquote>
 <blockquote class="draft-block draft--blockquote">鄭成功大概受到母親是日本人的影響，有潔癖，脾氣暴躁。這一點具體表現於甚至有冷酷之評的嚴格軍紀中。承天府尹楊朝棟、天興縣知視敬、斗給陳伍，即因合謀在配給鎮兵的糧餉做手腳舞弊而被砍頭。部將吳豪也因搶奪人民銀兩匿藏糧食之罪被斬。……恰當其時，鄭成功風聞鄭經在廈門和幼弟的乳母陳氏私通，大發雷霆，遣使帶四個木桶飭令把母親董氏(董夫人)、鄭經、陳氏以及私通所生嬰兒的首級帶回。董氏和鄭經有人庇護倖免一死。這個徹底的法治主義是維持鄭軍士氣的一大支柱。(王育德)</blockquote>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">結論：作者「<span style="font-weight: bold; ">以散文體書寫台灣史</span>，並以<span style="font-weight: bold; ">庶民的觀點</span>探究台灣歷史」的作法，值得有心寫作歷史普及讀物的人考慮，不過書中某些段落，作者高度模擬王育德《台灣：苦悶的歷史》到近乎抄襲的地步，以及幾則故事「情節不太合乎常理」或「缺乏歷史根據」等問題，也值得我們警惕！因為引用或是模擬太多別人的東西，不只會降低自己著作的品質及原創性，而且終究會被眼尖的讀者發覺。</div>
 <div class="draft-block draft--p left">(全文終)</div>
-<div class="draft-block draft--p left"></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h3 class="draft-block draft--h3" name="header-c7cgn">相關文章：</h3>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/61c83657fd89780001d58526">關於台灣歷史的二三事：王育德「台灣：苦悶的歷史」 | 雀榕 - vocus</a></h3><span>為了讓台灣留日學生與日本民眾瞭解真正的台灣歷史，王育德用日文書寫《台灣：苦悶的歷史》。這本書最初由日本著名的出版社「弘文堂」出版，之後由留日學生黃國彥翻成中文，1979年由日本東京的台灣青年社出版。解嚴以後，中譯本由台灣的「前衛出版社」發行。 台灣史, 台灣歷史, 王育德, 台獨, 臺灣：苦悶的歷史, 台灣獨立, 台灣人, 台灣, 歷史, 出版, 研究, 這群人, 日本, 百年, 台灣文化協會, 發行</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimages.vocus.cc%2Fe3396a7b-df81-4bc5-add5-a54e93d18d74.jpg&amp;width=550&amp;sign=lvtQYWiJj7CYPnx5ql-i0gjpQdtaJ2yshIBGiGvI1f4"></div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/61bdd3c6fd89780001c6d569">關於台灣歷史的二三事：楊碧川的歷史書寫(台灣篇‧上篇) | 雀榕 - vocus</a></h3><span>1990年代，台灣歷史相關書籍如雨後春筍般出現，作者多是學術體制外的業餘人士，學識與論述能力良莠不齊。許多人熱切書寫台灣歷史，等不及台灣歷史系所設立，也不太敢指望體制內學者的良心與熱忱，為的是：想儘快將戒嚴時期黨國體制隱瞞的歷史，揭露給更多人知道，楊碧川的台灣歷史書寫就是這股潮流的產物。 台灣史, 台灣歷史, 楊碧川, 簡明台灣史, 台灣共產黨, 台獨, 反殖民, 台灣, 歷史, 作者, 台灣人, 戒嚴時期, 出版, 台灣文化協會, 社會, 革命, 運動</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimages.vocus.cc%2F4492b52c-67bc-42cc-9896-b40db9113c8d.jpg&amp;width=550&amp;sign=Z7CMbfvutDMtgU1cpkMkLTLLu3PWsI9Iwz1GSIBgZfw"></div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/615ee2b1fd897800012261cb">關於台灣歷史的二三事：悅讀「台灣歷史」 | 雀榕 - vocus</a></h3><span>坊間有許多台灣歷史的入門書，有綜合性質的台灣歷史，也有針對文學、文化、教育、音樂、宗教、醫療.....某個領域而寫的台灣歷史，這些都是我們學者、業餘愛好者投入大量時間研究與寫作的心血結晶，也是不少出版社不計盈虧予以支持的成果。在此，我感謝他們！ 台灣史, 台灣歷史, 周婉窈, 台灣歷史圖說, 台灣史地, 歷史, 台灣, 作者, 出版, 文學, 台灣人, 教育, 綜合</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimages.vocus.cc%2Fda80013e-5e96-4f7b-899d-cc120c92753b.jpg&amp;width=550&amp;sign=T40j2DYE7BNTlb8aSo7lCq_vQb7hs47tsKbSZTJ31Ek"></div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/60cc9728fd89780001d94c34">關於台灣歷史的二三事：推薦戴寶村主編的「小的台灣史」 | 雀榕 - vocus</a></h3><span>這本小書適合全民閱讀，無論您是專研台灣歷史的學者，還是對台灣歷史的理解只有9年國民義務教育的程度，都能從書中找到閱讀的樂趣...... 戴寶村, 台灣史, 台灣歷史, 唐山過台灣, 小的台灣史, 清領台灣, 以台灣史為創作題材, 歷史, 台灣, 族群, 閱讀, 文獻, 蔣介石, 藝術家, 台灣海峽, 八田與一, 社會</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimages.vocus.cc%2Ffb55d859-5d5b-4bf3-b0f6-ed934c658e82.jpg&amp;width=550&amp;sign=qidSR0EN1ogQT7uHj4yT5y5pAidtaDT5XXAaMNQu9Qo"></div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://vocus.cc/article/6066b671fd89780001095598">關於台灣歷史的二三事：推薦「簡明台灣圖史」 | 雀榕 - vocus</a></h3><span>我推薦國立台灣歷史博物館推出的「簡明台灣圖史」這本書是國立台灣歷史博物館推出，大雁文化事業出版。國立台灣歷史博物館幾年前推出這本台灣歷史入門書，昨天我讀了，真的如書背所說，這是一本能讓我們「輕鬆讀完的臺灣小史」！裡面圖文並茂，又有「大航海時代」、「清代台灣」、「日本時代」的大事記，方便我們快速了 台灣歷史, 台灣史, 台灣歷史博物館, 簡明台灣圖說, 台史館, 臺灣史, 臺灣歷史, 歷史, 台灣, 博物館, 推薦</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimages.vocus.cc%2F8a8d75f5-8e56-4ece-8bce-8de87a37efbc.jpg&amp;width=550&amp;sign=MZNL0r_RpJONc2DO73TBUQwFntGvaNfQ-unZKkgV44k"></div>
-<div class="draft-block draft--p left"></div>
