--- a/_posts/2023-04-06-INITIUM-为什么防疫工作很难科学归科学-政治归政治-一场知识与意识形态的斗殴.html
+++ b/_posts/2023-04-06-INITIUM-为什么防疫工作很难科学归科学-政治归政治-一场知识与意识形态的斗殴.html
@@ -15,9 +15,21 @@ author: 特约撰稿人 黄俊儒 发自台北
 <blockquote>
 <p>病毒的终结仍得倚靠科学知识为基础的公卫战略，而不是靠投票来决定牠的去留。</p>
 </blockquote>
-<p>隐然地，这一场百年一遇的世纪大疫似乎逐渐要看到曙光了。只是在防疫过程中的各种争议似乎至今仍余波荡漾，除了先前台北市长选举中，原担任防疫指挥官的陈时中先生因为仇恨值爆表而中箭落马之外，刚上任行政院长的陈建仁先生也还在各种疫苗采购的质询中疲于奔命，眼见即将到来的明年总统大选，恐怕也难逃这个议题的滋扰。</p>
-<p>在这次COVID-19期间，防疫工作与政治立场的纠葛，也经常发生在欧美的案例中，尤其当时在川普（Donald Trump，另译特朗普）领政下的美国，共和党及民主党呈现出对于防疫措施极度不同的看法，甚至对于科学家的态度也有很大的落差。</p>
-<p>记得2020年美国大选变天之后，受拜登（Joe Biden）任命为首席防疫顾问的佛奇（Anthony Fauci），在第一场记者会就说：“能依循证据，让科学说话，有种获得自由的感觉。”可见防疫过程中，政治对于科学治理的影响并不是一件新鲜事，比较有意思的地方是，不同国家及区域对于政治极化的反应有著十分不一样的内里。</p>
+<p>隐然地，这一场百年一遇的世纪大疫似乎逐渐要看到曙光了。只是在防疫过程中的各种争议似乎至今仍余波荡漾，除了先前台北市长选举中，原担任防疫指挥官的陈时中先生因为仇恨值爆表而中箭落马之外，刚上任行政院长的陈建仁先生也还在各种疫苗采购的质询中疲于奔命，眼见即将到来的明年总统大选，恐怕也难逃这个议题的滋扰。<br><br>在这次COVID-19期间，防疫工作与政治立场的纠葛，也经常发生在欧美的案例中，尤其当时在川普（Donald Trump，另译特朗普）领政下的美国，共和党及民主党呈现出对于防疫措施极度不同的看法，甚至对于科学家的态度也有很大的落差。<br><br>记得2020年美国大选变天之后，受拜登（Joe Biden）任命为首席防疫顾问的佛奇（Anthony Fauci），在第一场记者会就说：“能依循证据，让科学说话，有种获得自由的感觉。”可见防疫过程中，政治对于科学治理的影响并不是一件新鲜事，比较有意思的地方是，不同国家及区域对于政治极化的反应有著十分不一样的内里。<br><br>台湾在这次疫情中，也同样经历过几次上冲下洗的不同阶段，从中央疫情指挥中心2020年1月5日起，开始每天召开记者会公布并说明最新疫情状况，到2021年5月中爆发大规模本土社区感染并提升至第三级疫情警戒标准之后，整个疫情期间的防疫基调开始从“平缓期”进入“争议期”。当时的社会气氛浮动、人心惶惶，随后就进入了各种疫苗抢打潮及采购争议的阶段，堪称是防疫过程中最大的挑战之一。<br><br>由于病毒及流行病这类议题，原本就与科学及民生息息相关，在时间紧迫及健康威胁的双重压力夹击之下，科学知识的不确定性导致防疫策略的游移，也使得整体事件变得高度政治敏感。在讯息纷乱且过剩的科技社会中，这类防疫科学知识如何能有助于政治决策及民众参与讨论，是各界人士都关心的议题，毕竟病毒的终结仍得倚靠科学知识为基础的公卫战略，而不是靠投票来决定牠的去留。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230407-taiwan-when-scientific-knowledge-meets-ideology/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/41d537760dcd4b28b440b2377e9e488c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月20日，台北，学生们戴著面罩走在街上。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年4月20日，台北，学生们戴著面罩走在街上。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
+
+<h2>实证研究</h2>
+<blockquote>
+<p>研究的结果十分耐人寻味，在这些不同的题项中，发现填答的反应几乎跟民众所具备的知识程度及学科领域没有关连性，但却与个人的政党倾向有显著相关。</p>
+</blockquote>
+<p>有效的防疫系统化措施，需要仰赖民众们的集体配合，甚至是一定程度的牺牲。许多国家在COVID-19期间所陆续进行的调查研究，多看见各种假新闻可能造成民众对于风险大小程度的不同感知，严重者甚至促使不同社会群体之间的敌意，例如自由派与保守派、讯息充分者与讯息欠缺者、年轻及年老之间等，就可能因为对于讯息解读的不同调，而导致迥异的政策配合度，甚至可以为了戴不戴口罩大打出手。<br><br>在这种状况之下，我们在台湾主导了一个学术性的研究调查，试图了解这种因为假讯息、群体认同所造成的极端化现象存在的情形，当各路势力都同时在影响民众对于疫情的解读时，到底哪一种力量会最明显主宰民众的态度与认知？这个问题的解答，将会关连疫情期间的科学传播效果，并间接地影响防疫策略的落实程度。</p>
+<p>实际的作法上，我们透过问卷的设计进行大规模的调查，在2021年8月11日至16日期间，时值台湾卫福部刚刚核准国产高端疫苗的紧急授权专案，以及民间积极协助政府向国外购买BNT疫苗的时期，在此时限内共获得1,250份的有效问卷。</p>
+ 
+ 
+ 
+ 
+ 
  
  
  
@@ -31,20 +43,6 @@ author: 特约撰稿人 黄俊儒 发自台北
  
  
  
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
 
  
  
@@ -58,10 +56,7 @@ author: 特约撰稿人 黄俊儒 发自台北
  
  
  
-<p>台湾在这次疫情中，也同样经历过几次上冲下洗的不同阶段，从中央疫情指挥中心2020年1月5日起，开始每天召开记者会公布并说明最新疫情状况，到2021年5月中爆发大规模本土社区感染并提升至第三级疫情警戒标准之后，整个疫情期间的防疫基调开始从“平缓期”进入“争议期”。当时的社会气氛浮动、人心惶惶，随后就进入了各种疫苗抢打潮及采购争议的阶段，堪称是防疫过程中最大的挑战之一。</p><p>由于病毒及流行病这类议题，原本就与科学及民生息息相关，在时间紧迫及健康威胁的双重压力夹击之下，科学知识的不确定性导致防疫策略的游移，也使得整体事件变得高度政治敏感。在讯息纷乱且过剩的科技社会中，这类防疫科学知识如何能有助于政治决策及民众参与讨论，是各界人士都关心的议题，毕竟病毒的终结仍得倚靠科学知识为基础的公卫战略，而不是靠投票来决定牠的去留。</p><p><a class="image" href="https://theinitium.com/article/20230407-taiwan-when-scientific-knowledge-meets-ideology/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/41d537760dcd4b28b440b2377e9e488c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月20日，台北，学生们戴著面罩走在街上。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">2022年4月20日，台北，学生们戴著面罩走在街上。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>实证研究</p><p>
-</p><p>研究的结果十分耐人寻味，在这些不同的题项中，发现填答的反应几乎跟民众所具备的知识程度及学科领域没有关连性，但却与个人的政党倾向有显著相关。</p>
-<p></p><p>有效的防疫系统化措施，需要仰赖民众们的集体配合，甚至是一定程度的牺牲。许多国家在COVID-19期间所陆续进行的调查研究，多看见各种假新闻可能造成民众对于风险大小程度的不同感知，严重者甚至促使不同社会群体之间的敌意，例如自由派与保守派、讯息充分者与讯息欠缺者、年轻及年老之间等，就可能因为对于讯息解读的不同调，而导致迥异的政策配合度，甚至可以为了戴不戴口罩大打出手。</p><p>在这种状况之下，我们在台湾主导了一个学术性的研究调查，试图了解这种因为假讯息、群体认同所造成的极端化现象存在的情形，当各路势力都同时在影响民众对于疫情的解读时，到底哪一种力量会最明显主宰民众的态度与认知？这个问题的解答，将会关连疫情期间的科学传播效果，并间接地影响防疫策略的落实程度。</p><p>实际的作法上，我们透过问卷的设计进行大规模的调查，在2021年8月11日至16日期间，时值台湾卫福部刚刚核准国产高端疫苗的紧急授权专案，以及民间积极协助政府向国外购买BNT疫苗的时期，在此时限内共获得1,250份的有效问卷。</p><p>这份问卷主要分成三个部分，首先是“与 COVID-19 疫情相关问题”，题目包含反疫苗讯息的接收管道、对于不同疫苗的接种意愿与风险评估、对于各国政府防疫成效评估、以及对于疫苗争议的疑惑等问题。例如民众对于中央疫情指挥中心的情绪是充满愤怒、尊敬、不舍还是讨厌？对于他们所表现出来的能力感到有信心、有能力、专业、认真还是聪明？认为他们表现出来的态度是宽容、谦虚、真诚还是温暖等。</p><p>再者，第二部分则是“关于疫苗的问题”，依据讯息错误及恶意的程度，从最基本的基础讯息到具有不实概念的错讯息（misinformation），最后再到人为介入的恶讯息（disinformation），每道题目透过不同的情境陈述（共21道题目）了解个人对于疫苗与政策的概念及看法。最后一部份则是“基本资料”，包括性别、年龄、学历、学位领域、政党认同等基础讯息。</p><p>研究的结果十分耐人寻味，在这些不同的题项中，发现填答的反应几乎跟民众所具备的知识程度及学科领域没有关连性，但却与个人的政党倾向有显著相关。</p><p>例如，关于疫情的报导内容，民众虽普遍期望媒体传达正确事实更胜于进行监督与批判，但是政党认同的程度却会显著影响人们对于媒体记者针对政府提出监督或批判的期待。举例而言，政党认同愈倾向泛蓝者，愈同意记者应该要质疑与批判“疫情警戒控管等政治决策”以及“专家学者提出的疫情建议”；而政党认同愈倾向泛绿者，对于记者所提出不同于政府或是专家的声音，则愈显得保留。同样是针对记者的角色，一个阵营希望他们高高举起，另一个阵营则希望他们轻轻放下。</p><p>在民众对于“政府防疫态度”的认同程度方面，同样发现政党认同的因素会显著地影响民众对于政府防疫以及指挥中心的评价，不仅各向度均有显著差异，甚至显示出明显的两极化结果。例如对于“中央疫情指挥中心”的感受，泛蓝的民众强烈地感到愤怒及讨厌，泛绿的民众则明显地感到令人尊敬与令人不舍。相对地，在民众对于疫苗讯息的认知上，对于一些基础知识虽然仍显示出不同政党认同间的显著差异，但至少还不至于出现同意或不同意的极端反差。</p><p>但是在与不实概念相关的“错讯息”及“恶讯息”解读方面，政党认同的不同就呈现出明显的差异，几乎每一道题项均有显著的差别。例如，泛绿受访者更倾向否定“口罩虽可以阻挡疫情但有害健康”、否定“疫苗会改变接种者的基因”、乃至否定“疫苗中含有许多有毒成份”等不实讯息，相对地，泛蓝支持者就会显示出对于相关陈述的反向疑虑。此外，虽然蓝绿双方或多或少都感受到医疗专家和科学数据对于政府疫苗政策的不信任或不支持，但是泛蓝受访者明显地感受更为强烈。</p><p>总结前述的研究结果可以发现，不论是对于媒体记者的期望、政府防疫的态度、疫苗讯息的认知等，“政党认同”都扮演了一个最为显著的影响角色，而且随著该议题的政治意图相关性越高（从基础讯息、错讯息到恶讯息），影响的显著性也越高。</p><p><a class="image" href="https://theinitium.com/article/20230407-taiwan-when-scientific-knowledge-meets-ideology/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/8184020cfcc641e390e64c77b9ee8aef.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年1月4日，中坜出现2019冠状病毒确诊过案，清洁人员在市场消毒后，为自己清洗。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>这份问卷主要分成三个部分，首先是“与 COVID-19 疫情相关问题”，题目包含反疫苗讯息的接收管道、对于不同疫苗的接种意愿与风险评估、对于各国政府防疫成效评估、以及对于疫苗争议的疑惑等问题。例如民众对于中央疫情指挥中心的情绪是充满愤怒、尊敬、不舍还是讨厌？对于他们所表现出来的能力感到有信心、有能力、专业、认真还是聪明？认为他们表现出来的态度是宽容、谦虚、真诚还是温暖等。</p><p>再者，第二部分则是“关于疫苗的问题”，依据讯息错误及恶意的程度，从最基本的基础讯息到具有不实概念的错讯息（misinformation），最后再到人为介入的恶讯息（disinformation），每道题目透过不同的情境陈述（共21道题目）了解个人对于疫苗与政策的概念及看法。最后一部份则是“基本资料”，包括性别、年龄、学历、学位领域、政党认同等基础讯息。</p><p>研究的结果十分耐人寻味，在这些不同的题项中，发现填答的反应几乎跟民众所具备的知识程度及学科领域没有关连性，但却与个人的政党倾向有显著相关。</p><p>例如，关于疫情的报导内容，民众虽普遍期望媒体传达正确事实更胜于进行监督与批判，但是政党认同的程度却会显著影响人们对于媒体记者针对政府提出监督或批判的期待。举例而言，政党认同愈倾向泛蓝者，愈同意记者应该要质疑与批判“疫情警戒控管等政治决策”以及“专家学者提出的疫情建议”；而政党认同愈倾向泛绿者，对于记者所提出不同于政府或是专家的声音，则愈显得保留。同样是针对记者的角色，一个阵营希望他们高高举起，另一个阵营则希望他们轻轻放下。</p><p>在民众对于“政府防疫态度”的认同程度方面，同样发现政党认同的因素会显著地影响民众对于政府防疫以及指挥中心的评价，不仅各向度均有显著差异，甚至显示出明显的两极化结果。例如对于“中央疫情指挥中心”的感受，泛蓝的民众强烈地感到愤怒及讨厌，泛绿的民众则明显地感到令人尊敬与令人不舍。相对地，在民众对于疫苗讯息的认知上，对于一些基础知识虽然仍显示出不同政党认同间的显著差异，但至少还不至于出现同意或不同意的极端反差。</p><p>但是在与不实概念相关的“错讯息”及“恶讯息”解读方面，政党认同的不同就呈现出明显的差异，几乎每一道题项均有显著的差别。例如，泛绿受访者更倾向否定“口罩虽可以阻挡疫情但有害健康”、否定“疫苗会改变接种者的基因”、乃至否定“疫苗中含有许多有毒成份”等不实讯息，相对地，泛蓝支持者就会显示出对于相关陈述的反向疑虑。此外，虽然蓝绿双方或多或少都感受到医疗专家和科学数据对于政府疫苗政策的不信任或不支持，但是泛蓝受访者明显地感受更为强烈。</p><p>总结前述的研究结果可以发现，不论是对于媒体记者的期望、政府防疫的态度、疫苗讯息的认知等，“政党认同”都扮演了一个最为显著的影响角色，而且随著该议题的政治意图相关性越高（从基础讯息、错讯息到恶讯息），影响的显著性也越高。</p><p><a class="image" href="https://theinitium.com/article/20230407-taiwan-when-scientific-knowledge-meets-ideology/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/8184020cfcc641e390e64c77b9ee8aef.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年1月4日，中坜出现2019冠状病毒确诊过案，清洁人员在市场消毒后，为自己清洗。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年1月4日，中坜出现2019冠状病毒确诊过案，清洁人员在市场消毒后，为自己清洗。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>意识形态的超大型巨人</p><p>
 </p><p>过往我们认为“告知公众正确的科学事实”应该可以有意义地影响人们对于相关事件的感知，但是从晚近可以看见一个逐渐明显的趋势：讯息传播并不是一个简单的事实转译，它更是一个意义协商的过程。</p>
 <p></p><p>从前述的研究结果，可以细致地看出疫情期间台湾民众的紧张神经如何被挑动。过往我们认为“告知公众正确的科学事实”应该可以有意义地影响人们对于相关事件的感知，但是从晚近一些科技社会议题的发展来看，可以看见一个逐渐明显的趋势：讯息传播并不是一个简单的事实转译，它更是一个意义协商的过程。</p><p>尤其是随著社群媒体的发达，人们对于消息来源的个别化倾向，特别容易导致同温层效应的加剧。例如，在COVID-19期间，疫情本身就是一个高度政治化的健康风险议题，任何因素的扰动都可能导致社会的分裂，驱使持有不同观点的人们更加远离彼此。从调查的结果可以看出，大部分民众对于复杂的政治议题多习惯仰赖有限的消息来源进行决策，并且倚赖认知的捷径去做出符合自己政治喜好的选择，即使是疫情或疫苗这类高度科学知识相关且具有明确物质基础的议题，也同样在意识形态的催化之下被严重地泛政治化。</p><p>COVID-19 疫情是一个以科学知识作为基础，同时牵扯个人生命安全、具有时间迫切性的科技风险议题，由于它背后涉及高度的社会复杂性及科学不确定性，所以对于一般常民来说，具有很大的决策难度。就主理防疫工作的政府部门而言，他们期望透过全民有秩序的配合，让防疫的工作可以整齐同步且系统有效。但是对于民众来说，面对这种高度不确定的状况，会有许多油然而生的不安全感及恐惧，如果再加上过往曾经有过政治上的受挫经验（例如自己激情支持的候选人落选了），不信任的感觉很容易就会加成扩大。</p><p>解析民众防疫心理背后的运作机制，可以想像成每个人的脑中都住著几个掌管心智运作的巨人，平时这些巨人各司其职，各自监管教育学习、娱乐休闲、科学知识、理性思考等工作，在大家各自忙碌的时候，同时有一只长得特别巨大的意识形态巨人候在旁边，这只超大型巨人平时都在睡觉休息，看似无害，但如果一不小心有什么风吹草动惊醒了牠，牠就可能醒来主导战局。我们都很好奇，这只意识形态的巨人如果跟其他巨人一起打架的话，到底谁会胜出？尤其是在这一场与疫病十分相关的战斗上，理应其他的巨人具有主场优势，应该还可以平分秋色吧？</p><p>从结果来看，在这一场巨人之间的斗殴中，意识形态的巨人取得了全面性的胜利。原因是牠很强壮也很暴力，只要牠加入战局，其他的巨人都不是牠的对手，意识形态明显压过其他知识理性的力量。</p><p>这样的状况在过去的学术研究中也有类似的讨论，例如一般民众对于干细胞研究的态度也经常受到价值观和媒体的影响，虽然科学知识的涵养也同样影响人们对于干细胞研究的态度，但是相较于宗教信仰和意识形态，科学知识是气场最弱的。甚至过去还有更为极端的发现，例如美国有关“全球暖化”议题的相关调查中就显示，教育程度越高的人，对于全球暖化的看法分歧越严重，甚至呈现出“教育程度愈高、差距越明显”的态势，并且其看法也会与所认同的政党属性息息相关，而且就算随著时间演变，也一直维持颇为稳定的样貌。</p><p><a class="image" href="https://theinitium.com/article/20230407-taiwan-when-scientific-knowledge-meets-ideology/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/3410618b5b594f9390911408c4d3fd52.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月23日，台北，疫情期间，一对情侣在美食广场内亲吻。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
