--- a/_posts/2023-04-06-PQ-歷史性的一刻-麥卡錫以元首級規格招待台灣總統並與跨黨派議員會議.html
+++ b/_posts/2023-04-06-PQ-歷史性的一刻-麥卡錫以元首級規格招待台灣總統並與跨黨派議員會議.html
@@ -42,7 +42,7 @@ author: 謝時
 
 
 
-<p>眾議院中國問題特別委員會（The Select Committee on the CCP）主席、共和黨籍的蓋拉格（Mike Gallagher）在記者會上強調，我們跨黨派代表團今天在這裡要傳達一個簡單的訊息：<strong>「我們無所畏懼。」</strong>「我們支持我們的台灣友人…… 就像在巨大的獨裁黑暗邊緣燃燒的光明蠟燭。」</p>
+<p>眾議院中國問題特別委員會（The Select Committee on the CCP）主席、共和黨籍的蓋拉格（Mike Gallagher）在記者會上強調，我們跨黨派代表團今天在這裡要傳達一個簡單的訊息：<strong>「我們無所畏懼。」</strong>「我們支持我們的台灣友人…… 台灣就像在巨大的獨裁黑暗邊緣燃燒的光明蠟燭。」</p>
 
 
 
