--- a/_posts/2023-04-08-PQ-鄭南榕自焚殉道三十四週年-銘記反抗的勇氣面對全新威脅.html
+++ b/_posts/2023-04-08-PQ-鄭南榕自焚殉道三十四週年-銘記反抗的勇氣面對全新威脅.html
@@ -12,7 +12,7 @@ author: 林 奕辰
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/96114198-a500-4dae-a7aa-129d6630a6a2.jpg" alt="" class="wp-image-132136" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/96114198-a500-4dae-a7aa-129d6630a6a2.jpg 799w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/96114198-a500-4dae-a7aa-129d6630a6a2-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/96114198-a500-4dae-a7aa-129d6630a6a2-768x512.jpg 768w" sizes="(max-width: 799px) 100vw, 799px" /><figcaption>總統府資政葉菊蘭、監察院長陳菊、副總統賴清德、鄭南榕基金會董事長鄭竹梅在「鄭南榕殉道 34 週年追思紀念會」默思1分鐘，以此悼念及緬懷鄭南榕。／圖：總統府
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/96114198-a500-4dae-a7aa-129d6630a6a2.jpg" alt="" class="wp-image-132136" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/96114198-a500-4dae-a7aa-129d6630a6a2.jpg 799w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/96114198-a500-4dae-a7aa-129d6630a6a2-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/96114198-a500-4dae-a7aa-129d6630a6a2-768x512.jpg 768w" sizes="(max-width: 799px) 100vw, 799px" /><figcaption>總統府資政葉菊蘭、監察院長陳菊、副總統賴清德、鄭南榕基金會董事長鄭竹梅在「鄭南榕殉道 34 週年追思紀念會」默思1分鐘，以此悼念及緬懷鄭南榕。／圖：總統府
 </figcaption></figure></div>
 
 
