--- a/_posts/2023-04-09-INITIUM-濑户的田中绫-她的秘密书店里-有一处秘密文库.html
+++ b/_posts/2023-04-09-INITIUM-濑户的田中绫-她的秘密书店里-有一处秘密文库.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 濑户的田中绫：她的秘密书店里，有一处秘密文库⋯⋯
+title: 濑户的田中绫：她的秘密书店里，有一处秘密文库
 date: 2023-04-09 23:12:00.000000000 +00:00
 link: https://theinitium.com/article/20230410-culture-bookstore-japan/
 categories: initium
