--- a/_posts/2023-04-09-INMEDIA-女子冰球隊世錦賽奪金-領隊-頒獎禮前會再檢查一次國歌.html
+++ b/_posts/2023-04-09-INMEDIA-女子冰球隊世錦賽奪金-領隊-頒獎禮前會再檢查一次國歌.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/10%201280_1.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>在播錯國歌事件陰霾下，<a href="https://bit.ly/3MtIkvq">香港女子冰球隊歷史性在世界錦標賽奪得金牌</a>。本身是冰協義務秘書兼領隊的關婉儀，她回覆傳媒查詢時表示，感謝男、女子、青年隊及其家庭成員多年為香港冰球的付出：「要加多句，我想同政府講，我哋好知道國歌比一切重要，特首同各官員唔使擔心，我一陣頒獎禮前會再檢查一次，你放心。」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2H751Mtb61" title="W020230303087760749558"><img src="https://live.staticflickr.com/65535/52748440656_71fd07a17a_b.jpg" width="1024" alt="W020230303087760749558" /></a><br /><em>領隊關婉儀（右）</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2H751Mtb61" title="W020230303087760749558"><img src="https://live.staticflickr.com/65535/52748440656_71fd07a17a_b.jpg" width="1024" alt="W020230303087760749558" /></a><br /><em>資料圖片：領隊關婉儀（右）</em></p>
 <p><strong>關婉儀哭成淚人  指再辛苦都值</strong></p>
 <p>在港隊女子冰球隊奪冠後，關婉儀在賽後哭成淚人，她指冰協只有3名全職員工，每星期負責舉辦5個聯賽，並要兼顧港隊、梯隊訓練。她強調，即使工作屬義務性質，但自己與冰協主席簡揚傑每周七天工作，每晚均到冰球場看球員比賽、練習：「今次好開心，見到佢哋今日有成績，再辛苦都值。」</p>
 <p>男子隊早前在世界錦標賽獲得第三，在對伊朗的比賽賽後，主辦方錯誤播放反修例歌曲《願榮光歸香港》，球員已即時作出T字手勢要求暫停，主辦方及後亦承認自行在網上下載歌曲。</p>
