--- a/_posts/2023-04-10-INMEDIA-港協fb賀女子冰球隊奪冠-網民洗版質疑-踢出會前叨一叨光.html
+++ b/_posts/2023-04-10-INMEDIA-港協fb賀女子冰球隊奪冠-網民洗版質疑-踢出會前叨一叨光.html
@@ -16,7 +16,7 @@ author: 獨媒報導
 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FsfocHK%2Fposts%2Fpfbid02goPtBqnfhsfc6FgMRTZuKXuK4vi4a2DVUTq7WUcu8PEuqYF9e6FujbgMik8KLjZ6l&amp;show_text=true&amp;width=500" width="500" height="220" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe><p>
 <strong>網民：cut資助都算全力支持？</strong></p>
 <p>網民對港協「忽然祝賀」的態度有意見，不少人留言追問「cut資助都算全力支持」、「支咩持，唔係停人會籍咩」、「人哋咁叻仲要削資助」；亦有網民拿港協人士當日言論，諷刺「打嚟打去都係果幾隊，拎第一同第三有咩分別？」另有網民嘲諷港協暨奧委會「好戲」，「啱啱清明港協先啟動暫停冰協會籍程序，復活節就一切忘記晒...送賀詞舔光環？」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/57RDW0zD9Y" title="螢幕截圖 2023-04-10 下午4.43.50"><img src="https://live.staticflickr.com/65535/52806259241_d7f4f6038b_b.jpg" width="1024" alt="螢幕截圖 2023-04-10 下午4.43.50" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/J173sDimQS" title="2023041013"><img src="https://live.staticflickr.com/65535/52806742263_ce5f11d520_b.jpg" width="1024" alt="2023041013" /></a></p>
 <script async="" src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script><p><em>帖文截圖</em></p>
 <p><strong>冰協下月4日「死線」交報告</strong></p>
 <p>針對早前香港男子冰球隊參與世界冰球錦標賽第三級別比賽，大會在賽後錯誤播放反修例歌曲《願榮光歸香港》。港協暨奧委會在4月4日宣布啟動暫停冰協會員資格的相關程序，並要求冰協最遲5月4日前提交全面書面解釋及管治改善方案，否則將暫停會籍。</p>
