--- a/_posts/2023-04-08-INMEDIA-專訪-疫下兼職保險今季復出爭入港隊-劉浩霖-想證明自己.html
+++ b/_posts/2023-04-08-INMEDIA-專訪-疫下兼職保險今季復出爭入港隊-劉浩霖-想證明自己.html
@@ -16,7 +16,7 @@ author: 獨媒報導
 <p>被問到小時候的「我的志願」，劉浩霖自言沒想太多，在青苗出任隊長，獲得到區隊屯門跟操的機會，與一眾「大師兄」鄭廷智、周綽豐、梁國威及黃志聰踢波，但上陣機會不多：「個陣有波踢就keep住踢，踢踢吓會feel到自己踢得好。不過，去到屯門覺得緊張㗎，都怯怯地，同大過自己嘅人踢波。」</p>
 <p><strong>隨黃駿軒投東方  憶好友感難過「希望佢安好」</strong></p>
 <p>後來升中學，劉浩霖才出任中場，仁濟醫院第二中學最有名的是長跑，他亦理所當然加入了校隊，取得區內的學界冠軍。在區隊屯門機會不多，劉浩霖中四轉校到區內另一學校中華基督教會譚李麗芬紀念中學，並在老友黃駿軒的邀請下，到東方跟操。</p>
-<p>說到這裡，不免有點傷感。黃駿軒去年不幸墮樓身亡，阿霖不諱言，很掛念這位故友，他們自小踢街波認識，並成為好友，一起在由戴偉浚爸爸組織的青年足球隊「小南國」踢過一年，也在港隊青年隊踢過大大小小的比賽，並肩踢小型球的時候更是心有靈犀。</p>
+<p>說到這裡，不免有點傷感。<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E6%B7%B1%E6%B0%B4%E5%9F%97%E7%90%83%E5%93%A1%E9%BB%83%E9%A7%BF%E8%BB%92%E7%96%91%E5%A2%AE%E6%A8%93%E8%BA%AB%E4%BA%A1-%E5%A4%9A%E5%90%8D%E7%90%83%E5%9C%88%E4%B8%AD%E4%BA%BA%E8%87%B4%E5%93%80">黃駿軒</a>去年不幸墮樓身亡，阿霖不諱言，很掛念這位故友，他們自小踢街波認識，並成為好友，一起在由戴偉浚爸爸組織的青年足球隊「小南國」踢過一年，也在港隊青年隊踢過大大小小的比賽，並肩踢小型球的時候更是心有靈犀。</p>
 <p>在劉浩霖眼中，軒仔十分聰明、很為別人設想，而且用腦踢波。他們後來曾經在黃大仙重聚，自從軒仔離開職業足球後，近年則較少見面：「嗯，都幾掛住佢，希望佢安好。我哋原本可以一齊踢港超，踢深水埗⋯⋯真係好可惜。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/c9RLt0W24K" title="DSC_5294"><img src="https://live.staticflickr.com/65535/52655311847_3ef213bf0b_b.jpg" alt="DSC_5294" /></a></p>
 <p><strong>師承李健和  加盟東方決心踢職業</strong></p>
