--- a/_posts/2023-04-10-INITIUM-早报-许志永和丁家喜被以-颠覆罪-判处14年和12年监禁重刑.html
+++ b/_posts/2023-04-10-INITIUM-早报-许志永和丁家喜被以-颠覆罪-判处14年和12年监禁重刑.html
@@ -17,11 +17,11 @@ author:
 <p>许志永在躲避抓捕期间，曾于2020年1月发表<a href="https://chinadigitaltimes.net/chinese/635691.html">致习近平《劝退书》</a>公开信，劝习近平主动让位。公开信批评习近平缺乏政治家素养和治理能力，而且逆历史潮流加剧极权专制，靠打压各种自由来维护稳定。</p>
 <p>2010年许志永发起并与丁家喜等人共同创立了“新公民运动”，致力于争取公民权利和政府透明度。随后丁家喜于2013年4月17日被刑拘，2014年4月18日被北京海淀区法院以“聚众扰乱公共场所秩序罪”判刑3年6个月。许志永于2013年7月16日被刑拘，2014年1月26日被北京市第一中级人民法院以“聚众扰乱公共场所秩序罪”判刑4年。两人分别于2016年10月和2017年7月获释。</p>
 <p>今次判刑之前，罗胜春上周在Twitter上发布了丁家喜和许志永事先通过口述留下的法庭陈述。</p>
-<p><a href="https://twitter.com/luoshch/status/1644501747635826690">丁家喜在陈述中表示</a>，要“担起我们这一代人的历史责任，这个责任就是根除专制，建设美国中国。”</p>
+<p><a href="https://twitter.com/luoshch/status/1644501747635826690">丁家喜在陈述中表示</a>，要“担起我们这一代人的历史责任，这个责任就是根除专制，建设美好中国。”</p>
 <p>他还称“我看到了这样一幅景象：中国人民将从极度奴役中清醒过来，看透他们用道德谎言编织的各种公义，看清事实真相。”</p>
 <p><a href="https://twitter.com/luoshch/status/1644179129237925892">许志永在陈述中批评道</a>，“少数官僚决定13亿人信什么主义，说什么话语，听什么新闻，看什么电影。他们筑起高文化防火墙，隔离了中国与文明的世界。豢养数百万网监、网警、网评员，扼杀人民的声音。他们用数亿摄像头和大数据打造密不透风的监控网，使国人在权力面前，如同赤身裸体。”</p>
 <p>他还表示“我渴望一个自由的国度，没有权力怪兽横行的中国。我们有信仰自由，信什么宗教，什么主义是个人天性，权力不得干涉⋯⋯每个人免于权力扭曲，活在真实之中，成长为最好的自己。”</p>
-<h3>中国完成三天环台军事演习，包括封锁台湾岛</h3>
+<h3>中国完成三天环台湾军事演习，包括封岛</h3>
 <p><a href="http://www.mod.gov.cn/gfbw/sy/tt_214026/16215693.html">中国军方昨日宣布</a>，解放军东部战区完成了为期三天（4月8日至10日）的环台湾岛“战备警巡”和演习任务。</p>
 <p>演习内容包括多军兵种联合作战，以达到军事慑压效果，实现全天候、多方向进逼围岛，检验夺取制海权、制空权、制信息权能力，以及精确打击和立体封控能力。</p>
 <p><a href="https://www.cna.com.tw/news/aipl/202304100350.aspx">台湾国防部表示</a>，周一在台湾岛周围12小时内发现12艘中国军舰和91架次中国军机。其中54架次军机逾越台海中线，侵扰台湾西南、东南空域，扰台架次数量创新高。</p>
@@ -33,12 +33,12 @@ author:
 <p>中国解放军南部战区<a href="http://www.mod.gov.cn/gfbw/qwfb/16215583.html">新闻发言人昨日表示</a>，美国“米利厄斯号”（USS Milius）导弹驱逐舰当天未经中国政府批准，非法闯入中国南沙美济礁邻近海域，南部战区组织海空兵力全程跟监警戒，部队时刻保持高度戒备状态。</p>
 <p>美国海军第七舰队提前一天<a href="https://www.c7f.navy.mil/Media/News/Display/Article/3356493/7th-fleet-destroyer-conducts-freedom-of-navigation-operation-in-south-china-sea/">发表声明</a>预告了这次活动。声明指，“米利厄斯号”这次行动符合国际法支持的航行权利和自由，是在美济礁12海里内“正常行动”。</p>
 <p>声明表示，美济礁原本会在涨潮时没入海中，根据国际法，其周边不享有领海权利；中国在美济礁上填海建造设施，不改变其国际法属性。</p>
-<h3>美国国防部正在调查网上“泄漏文件”</h3>
+<h3>美国国防部调查网上“泄漏文件”</h3>
 <p>美国国防部长公共事务助理<a href="https://www.defense.gov/News/Transcripts/Transcript/Article/3357556/mr-chris-meagher-assistant-to-the-secretary-of-defense-for-public-affairs-holds/">克里斯·米格尔（Chris Meagher）周一在记者会上表示</a>，国防部的一个小组正在调查网上流传据称国防部泄漏文件的照片，但他拒绝讨论这些文件的数量、内容、真实性等问题。</p>
 <p>自3月以来，有一些据称是美国政府“机密”和“绝密”文件的照片在网上传播，内容涉及乌克兰战争，以及关于中国和美国盟友的敏感信息。</p>
 <p>米格尔表示，这些照片中的文件与向美国高级官员提供的关于俄乌战争每日简报和相关情报的格式相近，且照片中部分内容似乎做过修改。</p>
 <p>他表示，国防部正在评估这些文件照片对美国国家安全和美国盟友的影响，研究其传播范围和规模，评估具体影响和应对措施。</p>
-<h3>美国路易斯维尔一银行发生枪击案，四死九伤</h3>
+<h3>美国路易斯维尔市发生银行枪击案，四死九伤</h3>
 <p>当地周一上午，美国肯塔基州路易斯维尔市（Louisville）一家银行发生枪击案，<a href="https://www.bbc.com/news/world-us-canada-65233350">四人遇害死亡，九人受伤</a>，一名枪手被击毙。</p>
 <p>警方已公布四名遇害者身份，包括三男一女，年龄在40至64岁之间。警方称，警察在三分钟内作出反应，击毙枪手。</p>
 <p>警方确认枪手为23岁男子康纳·斯特金（Connor Sturgeon），他使用一把步枪作案，且作案时在网上直播。</p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
