Update VOCUS 2023-04-12 patch

--- a/_posts/2023-02-25-VOCUS-俄烏戰爭一年總檢討-7-豪賭-以時間為籌碼的對局.html
+++ b/_posts/2023-02-25-VOCUS-俄烏戰爭一年總檢討-7-豪賭-以時間為籌碼的對局.html
@@ -33,7 +33,7 @@ author: 王立第二戰研所
 <h3 class="draft-block draft--h3" name="header-db2qp">即時社群訊息激起同仇敵愾，烏俄關係已無轉圜可能</h3>
 <div class="draft-block draft--p left">俄軍在烏克蘭的軍紀表現，只能說精銳部隊以外，敗壞兩字不足以形容。戰鬥表現以外的民事工作，劫掠與濫殺是常態，這在二戰期間、後來的<a href="https://zh.wikipedia.org/zh-tw/%E9%98%BF%E5%AF%8C%E6%B1%97%E8%A1%9D%E7%AA%81" target="_blank" class="draft--a">阿富汗</a>、<a href="https://zh.wikipedia.org/zh-tw/%E8%BB%8A%E8%87%A3%E6%88%B0%E7%88%AD" target="_blank" class="draft--a">車臣</a>，或許都不是問題，媒體控制非常嚴格，我們都是多年後事態平靜，才曉得原來這麼糟糕。</div>
 <div class="draft-block draft--p left">今天的烏克蘭充滿社群軟體，監視器是沒台灣多，重點地區也都有，俄軍濫殺民眾的影片很快就流傳出去，劫掠的照片瞬間就能傳到烏克蘭人手上。</div>
-<div><iframe allowfullscreen src="https://twitter.com/NiKiTa_32156/status/1632756770430128128?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1632756770430128128%7Ctwgr%5E15dfa09edd3d7c9ab4407a3d27a60f061e8ffce1%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fnewtalk.tw%2Fnews%2Fview%2F2023-03-07%2F860571"></div>
+<div><iframe allowfullscreen src="https://twitter.com/NiKiTa_32156/status/1632756770430128128?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1632756770430128128%7Ctwgr%5E15dfa09edd3d7c9ab4407a3d27a60f061e8ffce1%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fnewtalk.tw%2Fnews%2Fview%2F2023-03-07%2F860571"></iframe></div>
 <div class="draft-block draft--p left">我們遠在天邊，可能無法體會這種感覺，對烏克蘭人而言，他們看到的是自己親友的物品出現在俄軍屍體身上，留在俄佔區的親人沒多活幾天，存活下來的人則在烏軍收復後，立刻哭訴其慘況。</div>
 <div class="draft-block draft--p left">這些都是血仇，烏克蘭人不可能原諒的，今天就算澤倫斯基死了，仇恨也不會消失，造成這些現象的就是俄羅斯自己。俄國要打消這種佔領工作後的麻煩，唯一的辦法就是速戰速決，一旦無法達成，負面效應就會全部出現。</div>
 <div class="draft-block draft--p left">現在烏克蘭已經普發武器，至少地方軍頭都保有武裝，每幾個烏克蘭人就有親友遭遇不幸的故事，在這種情境下，佔領工作就無限接近於不可能，只剩下無盡的摧毀。</div>
