--- a/_posts/2023-04-11-VOCUS-死亡之舞-被強姦的泰國史.html
+++ b/_posts/2023-04-11-VOCUS-死亡之舞-被強姦的泰國史.html
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">雖然《死亡之舞》裡面有蘊含著同志題材，但我認為那不是重點的一塊，我比較有感的是後續穿著迷彩褲與泰國紋身者的做愛表現，反覆性向是像是詮釋軍政府與泰國。被侵犯的國家政體，宛如被侵犯的身體不分男性女性。</div>
 <div class="draft-block draft--p left">而這樣的侵犯最終帶來的是一種死亡，死亡之舞裡人終有一死，但是很不幸的是，我們似乎無法選擇自己怎麼死去，而且在死去之後還無法有同等的價值。</div>
 <div class="draft-block draft--p left">在紀錄片《死亡之舞》中歌舞是平等的，它平等將弔念亡者，無論是被姦殺的女性、學運的運動者、泰皇、軍政府或是泰國這個國家，既然總有一死，為何要痛苦的死去？或在死後無法平等？如今的泰國是否還是以命運決定人民，或是既然生死由命，那在死亡之前，是否試圖去改變一丁點當代艱難的政治處境，會好過死後的服喪。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/UzCtRdZ6U7o"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/UzCtRdZ6U7o"></iframe></div>
