--- a/_posts/2023-04-12-PQ-五眼聯盟噩夢-美國五角大廈機密文件遭竊並公開.html
+++ b/_posts/2023-04-12-PQ-五眼聯盟噩夢-美國五角大廈機密文件遭竊並公開.html
@@ -8,7 +8,7 @@ tags: blog
 author: 艾格姆
 ---
 
-<p>近日社群媒體出現了一批關於美國關於烏克蘭、中東、中國、印太的國安機密文件，這件事讓五角大廈甚感震驚，並承認有機密文件洩漏，但未能證實這些文件的真實性。美國官員表示，洩露的規模以及文件本身的敏感性可能會造成巨大的破壞。一位高級情報官員稱這次洩密事件是「五眼聯盟的噩夢」，因為聯盟內的美國、英國、澳洲、紐西蘭和加拿大共享大範圍的情報，而且分析人士指出目前已知的外洩規模可能高達 100 多份文件。</p>
+<p>近日社群媒體出現了一批關於美國國防部評估烏克蘭、中東、中國、印太等區域的國安機密文件，這件事讓五角大廈甚感震驚，並承認有機密文件洩漏，但未能證實這些文件的真實性。美國官員表示，洩露的規模以及文件本身的敏感性可能會造成巨大的破壞。一位高級情報官員稱這次洩密事件是「五眼聯盟的噩夢」，因為聯盟內的美國、英國、澳洲、紐西蘭和加拿大共享大範圍的情報，而且分析人士指出目前已知的外洩規模可能高達 100 多份文件。</p>
 
 
 
@@ -44,7 +44,7 @@ author: 艾格姆
 
 
 
-<p>根據美國媒體報導，目前外洩的機密文件真實性尚無法確認，但至少有一份文件疑似遭竄改過，以讓烏克蘭死傷數字大過俄羅斯的死傷人數，而原版係指俄羅斯死傷大過烏克蘭，該文件甚至提及烏克蘭軍隊處境比北約對外屆承認的嚴重許多。</p>
+<p>根據美國媒體報導，目前外洩的機密文件真實性尚無法確認，但至少有一份文件疑似遭竄改過，以讓烏克蘭死傷數字大過俄羅斯的死傷人數，而原版係指俄羅斯死傷大過烏克蘭，該文件甚至提及烏克蘭軍隊處境比北約對外界承認的嚴重許多。</p>
 
 
 
