--- a/_posts/2023-04-12-INMEDIA-國安公眾教育展僅300入場人次-民青局稱將檢視公民教育資源中心工作計劃.html
+++ b/_posts/2023-04-12-INMEDIA-國安公眾教育展僅300入場人次-民青局稱將檢視公民教育資源中心工作計劃.html
@@ -8,9 +8,9 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/07%201280_6.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>民政及青年事務局轄下公民教育委員會，在柴灣青年廣場設立公民教育資源中心，但過去三個年度入場人次偏低，該中心前年舉辦的「國家安全公眾教育展覽」更僅得約300入場人次，即三日平均每日100入場人次。新民黨立法會議員黎棟國質疑，當局未有善用資源。民政及青年事務局局長麥美娟表示，當局將檢視中心的使用、工作計劃，及更新方法吸引市民參與參觀。</p>
+<img src="https://www.inmediahk.net/files/column_images/07%201280_7.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>民政及青年事務局轄下公民教育委員會，在柴灣青年廣場設立公民教育資源中心，但過去三個年度入場人次偏低，該中心前年舉辦的「國家安全公眾教育展覽」更僅得約300入場人次，即15日平均每日20入場人次。新民黨立法會議員黎棟國質疑，當局未有善用資源。民政及青年事務局局長麥美娟表示，當局將檢視中心的使用、工作計劃，及更新方法吸引市民參與參觀。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4QEF5Y9Mx2" title="ee_3"><img src="https://live.staticflickr.com/65535/52811734104_7b8f316fe7_b.jpg" width="1024" alt="ee_3" /></a><br /><em>位於柴灣青年廣場的公民教育資源中心，前年舉辦國家安全公眾教育展覽</em></p>
-<p>公民教育資源中心在2020至21年度的入場人次僅約150，2021至22年度則為500人次，今個年度截至2月則約3,050人次。而國家安全公眾教育巡迴展覽在2021年6月25至27日期間，在柴灣青年廣場的公民教育資源中心主題展覽廳展出，僅300入場人次，即平均每日100入場人次。民政及青年事務局指出，中心在2020年2月至2022年5月期間，因應新冠疫情曾在不同時段關閉或提供有限度服務。</p>
+<p>公民教育資源中心在2020至21年度的入場人次僅約150，2021至22年度則為500人次，今個年度截至2月則約3,050人次。而國家安全公眾教育巡迴展覽在2021年5月27日至6月7日、6月25至27日期間，在柴灣青年廣場的公民教育資源中心主題展覽廳展出，僅300入場人次，即平均每日20入場人次。民政及青年事務局指出，中心在2020年2月至2022年5月期間，因應新冠疫情曾在不同時段關閉或提供有限度服務。</p>
 <p>立法會財委會下午舉行特別會議，黎棟國關注2022至23年度竟僅得3,050入場人次，指平均每日不足10人，問當局是否能接受。黎棟國認為，公民教育資源中心用作推廣《憲法》、《基本法》及《國安法》用意良好，「但參與人數咁低」，問政府會否設立關鍵積效指標，即一定的入場人數，質疑當局是否有善用資源。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3dEM3kpm0s" title="無標題"><img src="https://live.staticflickr.com/65535/52810722532_e7a275167e_b.jpg" width="1024" alt="無標題" /></a><br /><em>黎棟國</em></p>
 <p><strong>麥美娟指受疫情影響  令入場人次減少</strong></p>
