--- a/_posts/2023-04-13-INITIUM-谁是厕妹-网络暴力-少女-戾气-与缺位的关怀.html
+++ b/_posts/2023-04-13-INITIUM-谁是厕妹-网络暴力-少女-戾气-与缺位的关怀.html
@@ -13,10 +13,10 @@ author: 陈晃
 <h2>什么是厕妹？</h2>
 <p>2022年7月，一名居住在香港的18岁女孩依奈因为网络暴力而坠楼自杀身亡。这一事件引发关注的同时，女孩生前曾活跃过的互联网亚文化小圈子“厕所”也因此走向大众视野。</p>
 <p>厕所是用户们对微博上一部分匿名隔空喊话bot的俗称，因为匿名的性质，这类微博被认为是“可以随便发泄、拉屎的地方”。由于其用户多为女性，大家便称自己为“厕妹”，互相称呼“老公”或“宝宝”，并运用一套以谐音为主的黑话来规避关键字审查与搜索。</p>
-<p>但不是所有接受匿名投稿的bot都可以被归类为“厕所”，从某种程度来讲，先有”厕妹“还是先有”厕所“就是一个鸡生蛋蛋生鸡式的问题。“厕所”的出现已经很难考证，根据网络上的一些猜测，由于“厕妹”往往都是具有泛女权意识且年纪不大的二次元或饭圈爱好者，厕所的前身可能只是一些针对此类受众的纯女性匿名bot，随着相似人群的聚集，则逐渐演变为了现在的样子。</p>
+<p>但不是所有接受匿名投稿的bot都可以被归类为“厕所”，从某种程度来讲，先有“厕妹”还是先有“厕所”就是一个鸡生蛋蛋生鸡式的问题。“厕所”的出现已经很难考证，根据网络上的一些猜测，由于“厕妹”往往都是具有泛女权意识且年纪不大的二次元或饭圈爱好者，厕所的前身可能只是一些针对此类受众的纯女性匿名bot，随着相似人群的聚集，则逐渐演变为了现在的样子。</p>
 <p>依奈自杀的导火索，便是在厕所里遭到过多恶毒的攻击，而原因仅仅是她说游戏打不到前几名就自杀却没有真的自杀。如此荒诞又悲惨的事件引起了极大的争议，网暴依奈的“厕妹”群体也遭到网友讨伐。</p>
 <p>据一位自称“以前当过厕妹”的女孩说，依奈去世之后，很多厕所评论区和QQ群都有讨论，大部分人都很同情她，也有小部分人提起她从前的“黑料”。而网爆依奈导致她自杀的那群女孩是她之前关系很好的朋友，后来闹掰了，依奈就一直被她们视奸嘲笑。几个女孩都是未成年的厕妹，喜欢同样的动漫和游戏。</p>
-<p>差不多同一时间，一篇以圈外人身份介绍“厕妹”的微博也得到了大量阅读和转发。该微博总结了厕妹的几个特点：年纪小，通常在14岁至18岁；具有抑郁或双相情感障碍特征，会自残并拍照发到网上；有药物滥用习惯，多为感冒药、止痛药；强烈的仇富情绪，认为有钱人“偷走了自己的生活”。这则微博也指，厕妹通常还有”惨圈女“的身份，“惨圈”也是一种互联网亚文化，顾名思义，就是一群觉得自己很“惨”的网友聚集在一起互相诉苦、舔舐伤口。相比之下，惨圈女的称谓不像厕妹这样有着“厕所用户”这样明确的定义，但由于两者具有较高的重合度，大部分人都习惯于将它们同时提及，甚至当作同义词来使用。</p>
+<p>差不多同一时间，一篇以圈外人身份介绍“厕妹”的微博也得到了大量阅读和转发。该微博总结了厕妹的几个特点：年纪小，通常在14岁至18岁；具有抑郁或双相情感障碍特征，会自残并拍照发到网上；有药物滥用习惯，多为感冒药、止痛药；强烈的仇富情绪，认为有钱人“偷走了自己的生活”。这则微博也指，厕妹通常还有“惨圈女”的身份，“惨圈”也是一种互联网亚文化，顾名思义，就是一群觉得自己很“惨”的网友聚集在一起互相诉苦、舔舐伤口。相比之下，惨圈女的称谓不像厕妹这样有着“厕所用户”这样明确的定义，但由于两者具有较高的重合度，大部分人都习惯于将它们同时提及，甚至当作同义词来使用。</p>
 <p>由于这些特点，厕妹/惨圈女们往往有着强烈的负面情绪宣泄的需求，这时“厕所”便成为了她们的最佳选择：互联网同温层的空间能被信任，完全匿名的规则又让人无需顾虑太多。随着这类宣泄式投稿增加，其他厕所用户也会被带动起来加入这一行列。厕所也不是完全没有规则，如果是挂人的投稿，大家默认不能暴露“素人”的网络身份。但如果是在社交平台拥有上万粉丝的博主，就不能被归类为“素人”</p>
 <p>另一个与厕妹群体紧密相关且引起舆论关注的现象则是滥用药物。事实上，这一问题在国际上已经被争论许久，也有许多相关的影视作品，在中国大陆则是近两年才逐渐被重视。青少年，尤其是有着心理问题或精神疾病的青少年一直是药物滥用的主要受害者，国内许多相关报道中也都提及，药物滥用人群中有许多都是中学生，吃药的主要目的也主要都是逃避现实、缓解精神压力。</p>
 <p>现在能在微博上看到的“厕所”数量极多并且分散，大部分厕所的被关注数都在几千至一万多。这些厕所主要分为两类，一是以作品为主题来聚集同好的，基本上集中于二次元和偶像文化领域，其中同人创作占多数；二是以相互倾诉负面情绪（被称为“吐黑泥”）为主题的，最具代表性的就是“穷厕”和“妈厕”，分别供大家交流原生阶层与家庭的烦恼。根据这类厕所的内容，很容易产生厕妹大多出身中下层、家庭环境较为恶劣的印象。但一位“前厕妹”在交流中表示，自己感觉这一群体内部的阶层分化很大，比如她就曾看到过一个家里很有钱的厕妹，背很贵的包、家里房子很大。父母忙于工作，于是开始向网络寻求慰籍，用她的原话来说，“类似于闹着玩，大概就真因为混网络磕药自残耽误学业家里也能送出国留学那种”。</p>
@@ -30,7 +30,7 @@ author: 陈晃
 <p>在厕所内部，自称“厕妹”、使用“厕语”是大家辨认同类的触角。但由于主流网民对“厕妹”群体并不友好，她们很多时候并不喜欢被其他人这样称呼。事实上，无论是“厕妹”还是“惨圈女”，当大众提起这些词汇是都带有或多或少的贬义。</p>
 <p>因此，厕所里更常见的网络暴力现象大多都是厕妹抱团针对圈外人的，很多厕妹会把自己看不惯的网络发言或行为截图投稿到相关厕所，配以阴阳怪气或只是一个简单的“评”字，评论区便会充满各式各样的附和与嘲讽。另一种网络暴力，或者说“吵架”则通常发生在“对家”之间，也就是在同一个作品中支持不同cp，或定位相似的不同偶像的粉丝，争吵通常也都是从攻击对方的喜好逐渐上升为人身攻击。由于出圈主要原因就是网暴， 厕妹的语言表达情绪激烈、动辄吵架也是了大众对这一群体印象不佳的主要原因。</p>
 <p>显然，这些类型的网络暴力不只发生在厕所里，只是由于厕所具有黑话、未成年人为主等标签化属性而加强了暴力的可见性。这本身也是互联网给公共讨论带来的改变之一。沟通变得快速而扁平、情绪表达愈发激烈，这些特征在沉浸在网络世界里长大的年轻一代身上表现得尤为明显。</p>
-<p>负面情绪、语言暴力等标签都完美契合了人们对“网络给青少年带来的不良影响”这一老生常谈问题的想象。但更深入地了解厕妹群体之后便不难发现，这样的交流模式很大程度上是一种营造共同体感受的手段。处于青春期的青少年一旦得不到足够的关注与疏导，转向网络寻求认同和抱团取暖便非常自然。一致对外的恶意显然能使社群的内部认同感更加坚固，厕妹用激烈乃至极端的情绪和内部黑话为自己构筑了一堵高墙，墙外是健全人（被称为“健人”、“萌萌人”）的世界，在那里她们是被排斥的异类，只有在“厕所”的共同体里才能找到安全感。“健全人不会去当厕妹的。”接受采访的“前厕妹”这样说。</p>
+<p>负面情绪、语言暴力等标签都完美契合了人们对“网络给青少年带来的不良影响”这一老生常谈问题的想像。但更深入地了解厕妹群体之后便不难发现，这样的交流模式很大程度上是一种营造共同体感受的手段。处于青春期的青少年一旦得不到足够的关注与疏导，转向网络寻求认同和抱团取暖便非常自然。一致对外的恶意显然能使社群的内部认同感更加坚固，厕妹用激烈乃至极端的情绪和内部黑话为自己构筑了一堵高墙，墙外是健全人（被称为“健人”、“萌萌人”）的世界，在那里她们是被排斥的异类，只有在“厕所”的共同体里才能找到安全感。“健全人不会去当厕妹的。”接受采访的“前厕妹”这样说。</p>
 <p>家庭暴力、校园霸凌、休学辍学都是在厕所里常被提及的话题，她们将爸爸妈妈称为“豹豹猫猫”，将“霸凌”称为“80”，仿佛用谐音就能消解掉这些名词背后成长过程中的结构性苦难。与大众印象不同，在此类诉苦的厕所投稿下面，大多数评论都是友善的安慰或出谋划策。就像她们被惹怒、开始攻击的门槛极低一样，激起她们共鸣的门槛也并不高，区分两者的只是一个“同类”的身份认同。</p>
 <p>从某种层面上看，厕妹的痛苦和困境都是极具普遍性的，来自家庭的创伤、身处集体的疏离、学业/工作带来的压力，这些是每个人都可能会面临的问题，而当这些问题落在青少年身上，所有痛苦都被无限放大。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-opinion-cemei/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/a4267e196d6b47c6ae402d16166f5a74.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2017年7月25日，北京，年轻人在购物中心内看手机。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -48,5 +48,5 @@ author: 陈晃
 <p>今年二月底，一组关于青少年抑郁症的数据登上了热搜，根据2月23日发布的《中国国民心理健康发展报告（2021～2022）》显示，青少年群体有14.8%存在不同程度的抑郁风险，高于成年群体。从相关厕所的评论区可以看出，大部分厕妹对自己精神状态不健康这件事也都有一定的认知，但家庭和学校都没能在这方面给她们合适的引导和治疗，于是她们转向网络寻求同温层的庇护。</p>
 <p>时代的飞速更迭也加剧了现代人的精神危机。正如吉登斯早在上世纪九十年代便提出的“存在性焦虑”概念，社会时钟的压力、家庭的不稳定、个体的原子化都可能会造成生活的失序，而青少年因其敏感的人格本身就更容易受到影响。加之中国社会长期以来对精神疾病的污名化，心理问题在出现初期很难得到恰当的回应，便容易发展成严重的精神疾病。</p>
 <p>现有的公共讨论对于厕妹的态度，也侧面印证了她们很难得到来自“成人世界”的关怀。大部分关于厕妹/惨圈女的报道里，网暴事件无疑是最重要的焦点。“青少年的恶意”被一再强调，为数不多的对厕妹群体内部的采访，其呈现方式往往也在有意或无意地去放大厕妹的幼稚、不讲理，对于这一亚文化的内部渊源以及产生缘由却只字不提。</p>
-<p>即便是在青少年抑郁问题已经逐渐受到舆论重视的当下，仍有很多成年人认为青少年的心理问题都只是普通的“青春期情绪不稳定”，或是幼稚的跟风行为。尤其当这些青少年的发泄方式不符合主流社会规范（例如厕妹），甚至可能引起”无病呻吟“的反感。无论痛苦的缘由在其他人看来多么微不足道，对于主体来说，痛苦都是无比切身具体的。如果将病态的产生仅仅归咎于“幼稚”或“恶意”而不去追究背后的问题，不仅是一种健全中心主义的凝视，还体现了对结构性问题的缺乏感知。</p>
+<p>即便是在青少年抑郁问题已经逐渐受到舆论重视的当下，仍有很多成年人认为青少年的心理问题都只是普通的“青春期情绪不稳定”，或是幼稚的跟风行为。尤其当这些青少年的发泄方式不符合主流社会规范（例如厕妹），甚至可能引起“无病呻吟”的反感。无论痛苦的缘由在其他人看来多么微不足道，对于主体来说，痛苦都是无比切身具体的。如果将病态的产生仅仅归咎于“幼稚”或“恶意”而不去追究背后的问题，不仅是一种健全中心主义的凝视，还体现了对结构性问题的缺乏感知。</p>
 <p>厕妹群体在某种程度上可以成为我们窥见青少年抑郁以及女性抑郁问题的一个窗口。由于疲于接收他人的负面情绪而对此类人群抱有反感或许是一种可以理解的常态，但当负面情绪成为一种现象乃至亚文化，整个社会便不得不对此进行反思。比起抨击青少年“纯粹的恶意”，青少年为什么会产生恶意才是更值得探究的问题。</p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
