--- a/_posts/2023-04-13-INITIUM-拆迁下的百年聚落-台中番仔路庄.html
+++ b/_posts/2023-04-13-INITIUM-拆迁下的百年聚落-台中番仔路庄.html
@@ -26,7 +26,7 @@ author: 陈焯煇
 <p>林秀芬从家中走出，两手捧著比自己高出许多的一落判决书，尽管此刻回忆诉讼情景，仍是一脸怨恨与不平。她激动地指控法院从不查邱涂金，以及与他共同持份的林茹海是长亿集团的马前卒、人头；而长亿集团杨仁元的直接持份与执行程序的加速，更摆明是图谋新光重划区飙涨的开发利益。2020年，村民接连败诉，她认定法律不公，求助公部门亦无望，于是开始带领村民走向抗争。2021年，村民发动围庄抗争，成功阻挡履勘程序。</p>
 <p>而这次，她似乎下了更多的决心。瓦斯桶、沙拉油、铁链，她早早就准备齐全。当天，唯独林家的古厝要被拆除，杀鸡儆猴的意味浓厚，警方也罕见地出动特勤中队，准备强硬驱散抗争群众。早上9点，红色喜气的鞭炮被村民作为烟雾弹而燃放，烟雾窜升，警方与抗争群众在巷弄中前后拉锯，尖叫与咒骂都过于刺耳。林秀芬站在自家屋瓦上守住最后防线。只是当警方终于攻入村庄，也一举冲垮她连日绷紧的心神。在一旁的村民、抗争者得使劲擒住她，才能阻止她在自己家中激动自伤。</p>
 <p>三小时后，现场断水断电，施工人员进屋，她在挣扎中被警方抬离。而外头的村民，见到施工人员一脚踩上熟悉的屋瓦。坐轮椅的老伯拿著举不高的拐杖作势投掷，婆婆则泪眼，或扑向警方求情，或合掌向天地求告。拆除作业后，林秀芬在村民搀扶下蹲坐路边，沙哑的声音责怪自己无力守住村庄。</p>
-<p>巷弄中，数排警力仍在戒备，施工人员进出搬运林秀芬家中的物品，老式的拨盘电话、长者们泡茶聊天的茶桌，以及原本挂在墙上的长辈遗照。院落中弯了腰的桑树，现在被印有刑事现场字样的黄色封锁线缠绕住树身，落了地的果实，来回的脚步踩踏成脏污。在月破大耗之日，拆除作业顺利进行，遭破坏、拆除的林家古厝，仅仅只是被占下的第一个城池。什么时候还会再进逼？又要如何抵御？村民们只能希冀最亲近的阿伯公仔守护吾土吾民，保佑命运多舛的村庄，陪伴走过未卜的路途。</p>
+<p>巷弄中，数排警力仍在戒备，施工人员进出搬运林秀芬家中的物品，老式的拨盘电话、长者们泡茶聊天的茶桌，以及原本挂在墙上的长辈遗照。院落中弯了腰的桑树，现在被封锁线缠绕住树身，落了地的果实，来回的脚步踩踏成脏污。在月破大耗之日，拆除作业顺利进行，遭破坏、拆除的林家古厝，仅仅只是被占下的第一个城池。什么时候还会再进逼？又要如何抵御？村民们只能希冀最亲近的阿伯公仔守护吾土吾民，保佑命运多舛的村庄，陪伴走过未卜的路途。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230412-photo-taichungdemolition/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/27b874abcf5c43a1bccf5a21b3086b01.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年4月9日，台中番仔路庄，“台中市太平区番仔路自救会”主委林秀芬的家。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2023年4月9日，台中番仔路庄，“台中市太平区番仔路自救会”主委林秀芬的家。<span class="credit">摄：唐佐欣/端传媒</span></figcaption></figure>
 
