--- a/_posts/2023-04-13-INITIUM-香港新生代导演通宵大对谈-我们自己-定义我们的年代.html
+++ b/_posts/2023-04-13-INITIUM-香港新生代导演通宵大对谈-我们自己-定义我们的年代.html
@@ -8,7 +8,7 @@ tags: blog
 author: 特约撰稿人 红眼 发自香港；录音整理 马碧玉
 ---
 
-<p>「我们之间有竞争？其实不是！是我们真是忍了这些老人太久，不用靠你们那一套，我们自己定义我们这一套。」</p><p>特约撰稿人 红眼 发自香港；录音整理 马碧玉</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/dbc7f477edef470eae1508d3ad5588fd.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="香港年轻导演： 曾宪宁、贾胜枫、何爵天、卓亦谦、林森与刘国瑞。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「香港导演曾宪宁、贾胜枫、何爵天、卓亦谦、林森与刘国瑞相聚一堂，把酒通宵，谈论今日及未来的香港电影。」</p><p>特约撰稿人 红眼 发自香港；录音整理 马碧玉</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/dbc7f477edef470eae1508d3ad5588fd.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="香港年轻导演： 曾宪宁、贾胜枫、何爵天、卓亦谦、林森与刘国瑞。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">香港年轻导演： 曾宪宁、贾胜枫、何爵天、卓亦谦、林森与刘国瑞。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><blockquote>
 <p>“别人看来，这班人好像很齐心地做电影，因为我们正面对相似的问题，但再过五年、十年，会见到一些不同，有些人会妥协，有些人会走，继续对抗这个系统。但只要我们记得今晚，或你最初的那个模样⋯⋯”</p>
 </blockquote>
@@ -352,22 +352,22 @@ author: 特约撰稿人 红眼 发自香港；录音整理 马碧玉
 <p></p><p><strong>端：离开传统文字工作之后，电影导演将会是你的第二人生吗？</strong></p><p><strong>贾</strong>：即使是现在，原来我已经拍了一部电影了？想到这里，也会觉得导演身份有点不太属于我。因为我做了十多年文字记者，影像一直离我很远。确实会很喜欢看书、看电影、听歌，但不会觉得自己有能力去拍摄一部电影，又好似冥冥之中有一些东西有推动著我。可能我一早都很喜欢电影，到现在就有些一发不可收拾，很想继续拍，继续拍，而且要一边拍一边学习。</p><p><strong>刘</strong>：那你最享受拍电影哪一个部分？</p><p><strong>贾</strong>：我最享受在拍摄现场，那种压过来让你好像别无选择，但又迫出某种可能性。我觉得现场是最困难、最辛苦，但也是有最火花出现的时刻。</p><p>
 
 </p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/9d772aeda0a14d1c8409e5897b7ddda3.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="卓亦谦：毕业于香港城市大学创意媒体学院，执导作品《年少日记》获选第五届“首部剧情电影计划”大专组。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">卓亦谦：毕业于香港城市大学创意媒体学院，执导作品《年少日记》获选第五届“首部剧情电影计划”大专组。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
+            <figcaption itemprop="caption">卓亦谦：毕业于香港城市大学创意媒体学院，执导作品《年少日记》获选第五届“首部剧情电影计划”大专组。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
 
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/1cec05bdf41a4380b037b51013f277a5.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="曾宪宁：毕业于巴黎索邦大学电影系，执导作品《灯火阑珊》获选第五届“首部剧情电影计划”专业组。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">曾宪宁：毕业于巴黎索邦大学电影系，执导作品《灯火阑珊》获选第五届“首部剧情电影计划”专业组。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/22a623c8454c4a08a98e69e86b793033.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="曾宪宁：毕业于巴黎索邦大学电影系，执导作品《灯火阑珊》获选第五届“首部剧情电影计划”专业组。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">曾宪宁：毕业于巴黎索邦大学电影系，执导作品《灯火阑珊》获选第五届“首部剧情电影计划”专业组。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/dd9f4eff2e8f4011b616cf64a5a83134.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="林森：毕业于香港演艺学院电影电视学院导演系，执导作品《窄路微尘》获选“mm2 新晋导演计划”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">林森：毕业于香港演艺学院电影电视学院导演系，执导作品《窄路微尘》获选“mm2 新晋导演计划”。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
+            <figcaption itemprop="caption">林森：毕业于香港演艺学院电影电视学院导演系，执导作品《窄路微尘》获选“mm2 新晋导演计划”。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/63c5fffb899e44049e36e0be4d6d3ef7.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="贾胜枫：曾为文化版记者，执导作品《流水落花》获选第六届“首部剧情电影计划”专业组。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">贾胜枫：曾为文化版记者，执导作品《流水落花》获选第六届“首部剧情电影计划”专业组。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
+            <figcaption itemprop="caption">贾胜枫：曾为文化版记者，执导作品《流水落花》获选第六届“首部剧情电影计划”专业组。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/c5e78738cd1149e79e86ae4e8d117c04.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="刘国瑞：定居于香港的马来西亚导演及编剧，执导作品《白日青春》获选第二届亚洲电影投资会“电影培训计划”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">刘国瑞：定居于香港的马来西亚导演及编剧，执导作品《白日青春》获选第二届亚洲电影投资会“电影培训计划”。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
+            <figcaption itemprop="caption">刘国瑞：定居于香港的马来西亚导演及编剧，执导作品《白日青春》获选第二届亚洲电影投资会“电影培训计划”。<span class="credit">摄：林振东/端传媒</span></figcaption></figure>
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230414-culture-hk-young-directors-roundtable/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/0a2912cbfedd4b32bcc2f41d29257fa7.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="何爵天：毕业于香港演艺学院电视电影学院导演系，执导作品《正义回廊》、《死尸死时四十四》。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">何爵天：毕业于香港演艺学院电视电影学院导演系，执导作品《正义回廊》、《死尸死时四十四》。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure><p></p><p>PART 2：影坛前辈难相处吗？</p><p><strong>卓亦谦刚到，六导齐聚。杯中泰斯卡，烟熏味浓烈。但有人饮得不够多。</strong></p><p>
+            <figcaption itemprop="caption">何爵天：毕业于香港演艺学院电视电影学院导演系，执导作品《正义回廊》、《死尸死时四十四》。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p></p><p>PART 2：影坛前辈难相处吗？</p><p><strong>卓亦谦刚到，六导齐聚。杯中泰斯卡，烟熏味浓烈。但有人饮得不够多。</strong></p><p>
 </p><p>曾宪宁：“有一晚我与张姐（张艾嘉）message，她回应：你放心吧，我的岗位就是演员。她很清楚这个界线，知道你不想被干涉，所以有时她会提出想法，但划好界线，然后退回一步。”</p>
 <p></p><p><strong>端：如今几乎每部新导演作品都会搭配一些影帝影后级的资深演员，影坛前辈难相处吗？</strong></p><p><strong>曾</strong>：准备拍摄之前张姐（张艾嘉）有就剧本给出一些意见，她的角色，原型是来自我访问过的一位丧偶女士，自从丈夫死了之后，她每一日都会拿著午饭去坟前吃饭，对于逝去的爱人有份执著。现在也有保留了这种质感，但张姐就觉得，她以往已经演过很多相似的女性，身边什么人都死过，死儿子、死老公、死阿妈，问为什么我这么多电影都是死死死，她想找一个较为不同的方式。所以，她会加了些灵巧和活泼在角色身上，跟我本来写的剧本有些出入。</p><p><strong>刘</strong>：我有问题，你和张姐有没有一个时候是，比如你对某样事件有很强烈的想法，一定要这样，而她一定觉得不是这样？</p><p><strong>曾</strong>：作为一名新导演，会想我写的剧本得到她的承认。虽然她愿意接演，但我不知道她是否因为关于霓虹灯的题材，或者是否出于想帮新导演，我知道，这确实占一定比重，但始终会期望你做的创作能够得到她的认同。有一晚我们 message 对话，她的回应是：你放心吧，我的岗位就是演员。她很清楚这个界线，知道你不想被干涉，所以有时她会提出想法，但划好了界线，然后退回一步。</p><p>
 </p><p>林森：“我觉得《白日青春》前半是非常好，我喜欢你ending的处理，大家不知道要前往哪个方向，大家香港人都是这个状况。很佩服你选这个题材。在香港这个地方，试问谁会 give a shit to southern-asia immigrant。”</p>
